116话校对及其它批量替换

--- a/OEBPS/Text/c010.xhtml
+++ b/OEBPS/Text/c010.xhtml
@@ -119,14 +119,14 @@
     <p class="divline"></p>
     <p>带着黑狼回来的梅赛德斯，首先从让黑狼相信自己开始了。</p>
     <p>如果告诉上下关系的话，下一次就建立信赖关系。基本的教育。</p>
-    <p>另外，因为一直都很难叫到无名氏，所以给它起了个名字叫小黑。</p>
+    <p>另外，因为一直都很难叫到无名氏，所以给它起了个名字叫克洛。</p>
     <p>一开始觉得シュバルツ也不错，但种族名是シュヴァルツ・ヴォルファング，却给シュバルツ起了个名字，这就等同于给人取了“人”这个名字。</p>
     <span class="comment translator">ホモ・サピエンス（Homo sapiens） 智人（学名：Homo sapiens），是人属下的唯一现存物种。形态特征比直立人更为进步。</span>
     <p>名字好像是忘记带着百万吨硬币从桥上掉下来的样子。</p>
-    <p>所以梅赛德斯并没有特别想好名字于是命名为小黑了。</p>
-    <p>シュバルツ和小黑的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为クーゲルシュライバー这种决战兵器名字的国家的语言相比。</p>
-    <p>说点题外话，本凯和小黑却意外地被母亲和奶奶所接受。</p>
-    <p>为了不让母亲害怕，让他们在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和小黑来，就这样普通地吃饭了。</p>
+    <p>所以梅赛德斯并没有特别想好名字于是命名为克洛了。</p>
+    <p>シュバルツ和克洛的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为クーゲルシュライバー这种决战兵器名字的国家的语言相比。</p>
+    <p>说点题外话，本凯和克洛却意外地被母亲和奶奶所接受。</p>
+    <p>为了不让母亲害怕，让他们在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和克洛来，就这样普通地吃饭了。</p>
     <p>到底是梅赛德斯的母亲吗。胆量不一般。</p>
     <p></p>
     <p>トライヌ商会马上开始巧克力和罐头的销售，进行着大规模的宣传。</p>
@@ -167,11 +167,11 @@
     <p>下定决心的第二天……有着相同境遇的兄弟们接触</p>
     <p>梅赛德斯也没想到会发生那么坏的事情。</p>
     <p class="divline"></p>
-    <p>Q、是怎么带着本凯和小黑去迷宫和街道的？</p>
+    <p>Q、是怎么带着本凯和克洛去迷宫和街道的？</p>
     <p>1、首先拿起本凯。</p>
     <p>2、施加重力阻断魔法投掷。</p>
-    <p>3、梅赛德斯乘小黑。</p>
-    <p>4、小黑跳跃本凯乘上</p>
+    <p>3、梅赛德斯乘克洛。</p>
+    <p>4、克洛跳跃本凯乘上</p>
     <p>5、咻~~</p>
 </body>
 
