--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -13,12 +13,12 @@
 <body>
     <h1>13. 同样的魔物</h1>
     <p>梅赛德斯原本计划瞄准最低层，但这次改变了，决定这次主要进攻浅层。</p>
-    <p>如果只是较浅层次的弱小魔物的话，用梅赛德斯和本凯、小黑来凝固前后的话就可以保护得住，但是如果出现了以与小黑相同速度移动的敌人的话就不能说是可以保护的。</p>
+    <p>如果只是较浅层次的弱小魔物的话，用梅赛德斯和本凯、克洛来凝固前后的话就可以保护得住，但是如果出现了以与克洛相同速度移动的敌人的话就不能说是可以保护的。</p>
     <p>所以这次只想游刃有余地应付各个阶层，以专心于魔物的画。</p>
-    <p>“<span class="character">我来清理所有的敌人。小黑陪着玛吉特，本凯在后方警戒”</span></p>
+    <p>“<span class="character">我来清理所有的敌人。克洛陪着玛吉特，本凯在后方警戒”</span></p>
     <p>“<span class="character">明白了”</span></p>
     <p>“<span class="character">汪”</span></p>
-    <p>前有梅赛德斯，后有本凯，而玛吉特则乘在小黑上。</p>
+    <p>前有梅赛德斯，后有本凯，而玛吉特则乘在克洛上。</p>
     <p>这样一来，弱小的魔物就不会伤害到玛格丽特了吧。</p>
     <p>给了玛吉特羊皮纸和笔，指示魔物出现后要画出它的样子。</p>
     <p>在一楼徘徊了一阵，然后首先出现的是巨大的鼹鼠。这也是梅赛德斯第一个战斗的魔物。</p>
@@ -57,7 +57,7 @@
     <p>另外，从那里诞生的魔物们也没有出生时的记忆吧。否则，本凯也应该知道它的未来是怎样的。</p>
     <p>“<span class="character">是吗。本凯，我把守护着门的你带出去了，这样的话，现在门前还有别的你吗？”</span></p>
     <p>“<span class="character">是的。恐怕在遇见你之前我就在这里吧”</span></p>
-    <p>“<span class="character">然后在十二层和我相遇之前的小黑……不，应该有没有名字的斯瓦尔茨・沃夫格”</span></p>
+    <p>“<span class="character">然后在十二层和我相遇之前的克洛……不，应该有没有名字的斯瓦尔茨・沃夫格”</span></p>
     <p>“<span class="character">是。应该也可以这么认为”</span></p>
     <p>说到这里，梅赛德斯头疼起来了。</p>
     <p>迷宫到底是什么？</p>
@@ -114,9 +114,9 @@
     <p>“<span class="character">但是我觉得真的不好，因为之后委托的难易度发生了变化，所以支付的委托报酬不会随后上升或下降。</span></p>
     <p><span class="character">因为，与此次相反，委托的难易度从后边降低了支付了的委托费被说还也感到为难吧？最初的契约书上也这样写着。</span></p>
     <p><span class="character">虽然变成让你吃亏的形式，但相应的也决定了更新secar等级，下次把你提升到C等级”</span></p>
-    <p>默赛德斯一边听着接待处的话，一边看着本凯和小黑。</p>
+    <p>默赛德斯一边听着接待处的话，一边看着本凯和克洛。</p>
     <p>咦？难道这些家伙很强？</p>
-    <p>至今为止，在梅赛德斯眼中，本凯和小黑始终是“弱小的迷宫中强大的部类”的魔物。</p>
+    <p>至今为止，在梅赛德斯眼中，本凯和克洛始终是“弱小的迷宫中强大的部类”的魔物。</p>
     <p>但是，事实上却判明了“普通的强大魔物”。</p>
     <p>“<span class="character">啊，对了。这个魔物的情报，全部合计225万Elka让我买下”</span></p>
     <p>对付出的金额超过预期的价格，梅赛德斯现在才明白，这不是开玩笑之类的，真的是那个迷宫，很强的迷宫。</p>
