--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -49,7 +49,7 @@
     <p></p>
     <p>作为随身行李的小型三角龙……立即购买了克拉伊利亚。这样行李就保管好了。</p>
     <p>梅赛德斯没有马上潜入迷宫，当天就回去了，花了数天时间对克拉伊利亚进行教育。</p>
-    <p>在训练的同时，通过多次熟悉使用哈尔巴德的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
+    <p>在训练的同时，通过多次熟悉使用哈尔巴德的训练，与本凯和克洛交织的模拟战来提高战斗力。</p>
     <p>就这样，做好了充分的准备，梅赛德斯终于朝着迷宫最下层的目标突入了斯塔克迷宫。</p>
     <p class="divline"></p>
     <p>这次的目的既不是地图，也不是捕获魔物，也不是收集素材。</p>
@@ -163,7 +163,7 @@
     <p>相反，被完全攻略，复活的事也没有了的三成……选择了黑色的门，战胜了困难？</p>
     <p>这样想的话，有一定程度的说明。</p>
     <p></p>
-    <p>“<span class="character">……本凯，小黑。做好觉悟了吗</span>”</p>
+    <p>“<span class="character">……本凯，克洛。做好觉悟了吗</span>”</p>
     <p>“<span class="character">是</span>”</p>
     <p>“<span class="character">汪呜！</span>”</p>
     <p></p>
