--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -15,8 +15,8 @@
     <p>黑门回应了梅赛德斯的回应打开了。</p>
     <p>广阔的内部——无论到哪里都是广阔的空间。</p>
     <p>虽然不知道到底是怎么在迷宫中形成这样的空间的，但梅赛德斯为了不把动摇表现出来，努力地走进了大门。</p>
-    <p>本凯和小黑也跟在后面，只有随身携带行李的克拉伊利亚留在门外。</p>
-    <p>于是门慢慢地关上了，梅赛德斯、本凯、小黑被关在里面。</p>
+    <p>本凯和克洛也跟在后面，只有随身携带行李的克拉伊利亚留在门外。</p>
+    <p>于是门慢慢地关上了，梅赛德斯、本凯、克洛被关在里面。</p>
     <p></p>
     <p>这样不突破考验，就无法生存下去。</p>
     <p>“ <span class="character">挑战真实的人啊，欢迎到来。</span>”</p>
@@ -72,7 +72,7 @@
     <p>这只是一种精神攻击。别被迷惑了。</p>
     <p>虽然摇头解除精神干涉，但就在那个间隙，历史之眼的拳头抓住了梅赛德斯。</p>
     <p>瞬间防御了,不过还是被华丽地吹飞撞到了地上。</p>
-    <p>不过本凯和小黑作为换手从左右扑上去。</p>
+    <p>不过本凯和克洛作为换手从左右扑上去。</p>
     <p>“<span class="character">三章——<ruby>
                 <rb>周围可怜的目光</rb>
                 <rt>Mitleid·Auge</rt>
@@ -83,16 +83,16 @@
     <p>他们好像在悲哀，或者蔑视着梅赛德斯。</p>
     <p>被全方位监视，是不利的。所有的动作都变得一目了然。</p>
     <p>死角不再是死角，奇袭作为奇袭无法成立。</p>
-    <p>小黑和本凯的攻击也容易被抛弃，用翅膀被弹开了。</p>
+    <p>克洛和本凯的攻击也容易被抛弃，用翅膀被弹开了。</p>
     <p>但是在那里重新站立了姿势的梅赛德斯跳入，任凭力量挥下哈尔巴德。</p>
     <p>“<span class="character">重力十倍！”</span></p>
     <p>配合击落的重力魔法增加重量。</p>
     <p>以浑身的一击切断了一个历史之眼的翅膀。</p>
     <p>……行得通！</p>
     <p>虽然是很厉害的敌人，但这边的攻击并不见效。</p>
-    <p>看到这一点，本凯和小黑也士气高涨，与梅赛德斯联合进行攻击。</p>
-    <p>本凯巧妙地操纵着六个武器，专心致志地打败历史之眼的姿势，小黑四处飞来飞去捣乱。</p>
-    <p>而且，以小黑为立足点，梅赛德斯跳了起来，全身心地投入一击。</p>
+    <p>看到这一点，本凯和克洛也士气高涨，与梅赛德斯联合进行攻击。</p>
+    <p>本凯巧妙地操纵着六个武器，专心致志地打败历史之眼的姿势，克洛四处飞来飞去捣乱。</p>
+    <p>而且，以克洛为立足点，梅赛德斯跳了起来，全身心地投入一击。</p>
     <p>但是他觉得那个很麻烦吧。历史之眼转向了下一个攻击。</p>
     <p>“<span class="character">四章——<ruby>
                 <rb>假装孤独的孤立</rb>
@@ -100,7 +100,7 @@
             </ruby>”</span></p>
     <p><span class="comment translator">アインザームカイト 德语(Einsamkeit) 寂寞、孤独。寂しさ（さびしさ）</span></p>
     <p>瞬间，梅赛德斯的周围被黑暗包围。</p>
-    <p>哪里都看不到本凯的身影，小黑的身影。</p>
+    <p>哪里都看不到本凯的身影，克洛的身影。</p>
     <p>糟糕，被孤立了……！</p>
     <p>黑色的火焰袭击着焦急万分的梅赛德斯。</p>
     <p>“<span class="character">库，啊！”</span></p>
@@ -109,12 +109,12 @@
     <p>冷静下来看清楚就行了。并不是真的被孤立了……只是看不见同伴的身影。</p>
     <p>然后，从周围的目光也能知道。</p>
     <p>没错，现在也是。有些眼神看着自己以外的某个地方。</p>
-    <p>也就是说，那里有本凯和小黑。</p>
+    <p>也就是说，那里有本凯和克洛。</p>
     <p>梅赛德斯扔下火焰的魔石华丽地爆炸，用闪光驱散黑暗一瞬间。</p>
     <p>紧接着跳跃挥舞哈尔巴德，用魔法放出风刃一个接一个地毁坏周围的眼。</p>
     <p>砍伐，破坏。砍伐，破坏。</p>
     <p>刀闪闪发光，眼前（景象）崩溃的同时黑暗消失了。</p>
-    <p>“<span class="character">本凯、小黑！没事吗！”</span></p>
+    <p>“<span class="character">本凯、克洛！没事吗！”</span></p>
     <p>“<span class="character">是！多少也没问题！”</span></p>
     <p>“<span class="character">汪！”</span></p>
     <p>确认同伴平安后，梅赛德斯就这样将风之刃向历史之眼投掷。</p>
@@ -134,23 +134,23 @@
     <p>梅赛德斯将水和冰的魔石全部扔到这里进行防御，但是无法防御。</p>
     <p>但是这样就可以了。因为她的目的不是防御什么的。</p>
     <p>“<span class="character">卧倒！”</span></p>
-    <p>在梅赛德斯指示的同时，本凯和小黑尽可能地拉开距离伏下。</p>
+    <p>在梅赛德斯指示的同时，本凯和克洛尽可能地拉开距离伏下。</p>
     <p>梅赛德斯也同样拉开距离，用魔石展开风之防壁。</p>
     <p>紧接着，由于高温的火焰而急剧气化的水发生了大爆炸，袭击了历史之眼自身。</p>
     <p>就是所谓的水蒸气爆炸。</p>
     <p>根据规模的不同，这种连山体崩溃都能引起的爆炸的确起到了作用。</p>
     <p>看不见翅膀。</p>
-    <p>小黑没有从那里逃走，梅赛德斯乘坐在上面。</p>
-    <p>历史之眼也发出迎击的火焰，不过，由于小黑机敏地避开那些，梅赛德斯变能够集中于攻击上。</p>
+    <p>克洛没有从那里逃走，梅赛德斯乘坐在上面。</p>
+    <p>历史之眼也发出迎击的火焰，不过，由于克洛机敏地避开那些，梅赛德斯变能够集中于攻击上。</p>
     <p>“<span class="character">哈！”</span></p>
     <p>哈尔巴德一閃。</p>
-    <p>斩断历史之眼的侧腹，小黑比接受反击更快地脱离。</p>
+    <p>斩断历史之眼的侧腹，克洛比接受反击更快地脱离。</p>
     <p>交替进攻的是本凯。</p>
     <p>他放着交叉弓一边牵制一边缩短距离，用多个武器同时攻击刺进了历史之眼的翅膀。</p>
     <p>“<span class="character">畳み掛けるぞ！”</span></p>
-    <p>梅赛德斯从跳跃的小黑身上跃起。</p>
+    <p>梅赛德斯从跳跃的克洛身上跃起。</p>
     <p>轻轻松松地挥舞着哈尔巴德，将斩击的风暴吹向了历史之眼。</p>
-    <p>本凯和小黑也配合着进行连续攻击，历史之眼用翅膀和手臂正确防御，反击。</p>
+    <p>本凯和克洛也配合着进行连续攻击，历史之眼用翅膀和手臂正确防御，反击。</p>
     <p>三比一尚且势均力敌。果然只有一半的考验是不够的。</p>
     <p>“<span class="character">第六章——<ruby>
                 <rb>过去不会改变</rb>
