--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -117,7 +117,7 @@
     <p>但是由于这个奖励，玛吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
     <p></p>
     <p>结束了玛吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
-    <p>为了堵住那辆马车的去路，本凯和小黑挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
+    <p>为了堵住那辆马车的去路，本凯和克洛挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
     <p>周围几个人倒下，能看见争斗的痕迹。</p>
     <p>到底发生了什么……。</p>
     <p>暂且试着听话，梅赛德斯朝着本凯他们前进了。</p>
