--- a/OEBPS/Text/c029.xhtml
+++ b/OEBPS/Text/c029.xhtml
@@ -88,7 +88,7 @@
     <p>相当有趣,不过，因为蛇不需要很轻地试着瞪的话厉害地退散了。</p>
     <p>其次映入眼帘的是像猫咪一样的猫型魔物。可是那个尺寸，能载人跑的那样大。</p>
     <p>厉害，你是能载人跑的魔物。</p>
-    <p>但是如果是可以搭乘的魔物的话，因为已经有小黑存在，所以不需要这个。</p>
+    <p>但是如果是可以搭乘的魔物的话，因为已经有克洛存在，所以不需要这个。</p>
     <p>默默地走过之后，对方好像也没有敌意似的喵喵地叫着，不知跑到哪里去了。</p>
     <p>（这里的魔物果然是从迷宫中溢出来的吧……）</p>
     <p>或许，离这里不远的地方有迷宫，在那里也有和这个平原一样的魔物。</p>
