--- a/OEBPS/Text/c030.xhtml
+++ b/OEBPS/Text/c030.xhtml
@@ -20,7 +20,7 @@
     <p>具备不输给有尺寸差的鹫的膂力和不让对方感到飞的不利的速度。</p>
     <p>如果梅赛德斯不知道这个世界的生物连概念都不知道的重力的话……如果适当的重力训练与血操术这个吸血鬼的强度没有直接关联的方法……一定，他在梅赛德斯的遥远的高处吧。</p>
     <p>但是，令人惊讶的是，和吉克哈特相互战斗的魔物吗？</p>
-    <p>不管怎么想，学生们都不是能战斗的对手。恐怕在战斗力方面也能与小黑匹敌吧。</p>
+    <p>不管怎么想，学生们都不是能战斗的对手。恐怕在战斗力方面也能与克洛匹敌吧。</p>
     <p>吉克哈特好像在苦战，胸口裂得很大。</p>
     <p>幸好只是擦了一件衣服，看不到受伤…………不，等一下。总觉得有点奇怪。</p>
     <p>但是深入到那里之后呢。每个人都有不想被碰触的秘密。</p>
