--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -61,7 +61,7 @@
     <p>梅赛德斯想，这很奇怪。</p>
     <p>的确，吉克哈特的剑技很棒，但即使如此，作为个人来说也只是优秀而已。</p>
     <p>虽然技能上是在梅赛德斯上面行走的，但是如果直接战斗的话，以基本规格的差距梅赛德斯会赢吧。</p>
-    <p>吉克哈特的实力只不过是和最初的小黑互角而已。</p>
+    <p>吉克哈特的实力只不过是和最初的克洛互角而已。</p>
     <p>“<span class="character">你也是seeker的话，迷宫就知道了。</span>”</p>
     <p>“<span class="character">这个嘛。</span>”</p>
     <p>“<span class="character">如果一个人能拥有那个迷宫的力量，你会怎么做？</span>”</p>
