--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -41,7 +41,7 @@
     <p>没有取得联合的乌合之众等，只要一对一地反复击破就可以了。如果高速地重复那个有多少人结果是一样的。</p>
     <p>但是，互相填补对方的空隙，在优秀的指挥官的指挥下袭击过来的敌人会成为超出预料的麻烦对手吧。</p>
     <p>再加上，魔物一体的质量高。</p>
-    <p>视野内的所有魔物都拥有可以到达最初时候的小黑的战力，没有弱兵。</p>
+    <p>视野内的所有魔物都拥有可以到达最初时候的克洛的战力，没有弱兵。</p>
     <p>恐怕是经过漫长的岁月不断量产强大的魔物吧。</p>
     <p>只考虑自然的积蓄的要点，如果花费一百年以上的时间多少膨胀也不明白。</p>
     <p>另外，贝阿朵里克斯还预测，男囚犯和男奴隶可能被困在迷宫里。</p>
@@ -77,7 +77,7 @@
     <p>那样的话，破坏那个联合。</p>
     <p>随着梅赛德斯的号令，被封印在哈尔巴德的魔物们出现了。</p>
     <p>全身铠甲的，总觉得是隔了好久的出场感觉的本凯。</p>
-    <p>被黑色体毛覆盖的大狼，小黑。</p>
+    <p>被黑色体毛覆盖的大狼，克洛。</p>
     <p>在天花板滑雪板上飞的是皮可。</p>
     <p>舒夫右手拿着菜刀，左手拿着平底锅。再也不干这家伙了。</p>
     <p>对非常生气恶心的warui·果冻，作为那个强化型的totemowarui·果冻。</p>
@@ -114,10 +114,10 @@
     <p>“<span class="character">按住他！</span>”</p>
     <p>另一方面，京濑智美·奥克他们取得联合确实打倒了魔物。</p>
     <p>还是这边优秀，怎么办。</p>
-    <p>“<span class="character">小黑！</span>”</p>
+    <p>“<span class="character">克洛！</span>”</p>
     <p>“<span class="character">汪！</span>”</p>
-    <p>响应梅赛德斯的号令，小黑跑了过去。</p>
-    <p>在满是奇怪的魔物中只有小黑被治愈了。</p>
+    <p>响应梅赛德斯的号令，克洛跑了过去。</p>
+    <p>在满是奇怪的魔物中只有克洛被治愈了。</p>
     <p>跳上他的背，一跳梅赛德斯向贝克里克斯接近。</p>
     <p>把贝阿朵列克斯为了自保从旁边飞出来的植物甪哈尔巴德砍掉。</p>
     <p>贝阿朵列克斯也用铁扇应战，膂力方面胜。</p>
