--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -104,7 +104,7 @@
     <p>“<span class="character">……！</span>”</p>
     <p>“<span class="character">好温暖啊</span>”</p>
     <p>用胳膊的一挥弹出了梅赛德斯，更加手臂与枝分离成为几个触手袭击了全体人员。</p>
-    <p>皮可和小黑要敏捷地避开，本凯要坚固防御。</p>
+    <p>皮可和克洛要敏捷地避开，本凯要坚固防御。</p>
     <p>舒夫深深地吸了一口气，从口中吐出火焰，烧掉了触手。</p>
     <p>什么，如果想做像恶魔一样的攻击不是也能吗。</p>
     <p>“<span class="character">比！</span>”</p>
