--- a/OEBPS/Text/c086.xhtml
+++ b/OEBPS/Text/c086.xhtml
@@ -13,7 +13,7 @@
 <body>
     <h1>86. 裸体的男国王</h1>
     <p>“<span class="character">你打算干什么？让我报上那样的名字</span>”</p>
-    <p>梅赛德斯结束了与麦克斯的会面，在退房的同时追问罗勒。</p>
+    <p>梅赛德斯结束了与马克斯的会面，在退房的同时追问罗勒。</p>
     <p>那个无知的少年不可能自称那样的名字。</p>
     <p>毫无疑问，是受了谁的唆使。</p>
     <p>而且，除了这个男人，别无他物。</p>
@@ -28,7 +28,7 @@
     <p>虽然脸上还是一如既往地露出柔和的笑容，但要说这个男人，还是属于肮脏的类型。</p>
     <p>虽然还没有采取直接的手段，但似乎擅长施加压力使对方同步的手法。</p>
     <p>刚才和马克斯的见面也是这样。</p>
-    <p>带到这边没有退路的状况，显出武力梅赛德斯自然地麦克斯打算垂下头。</p>
+    <p>带到这边没有退路的状况，显出武力梅赛德斯自然地马克斯打算垂下头。</p>
     <p>如果在那里梅赛德斯，没办法的话，采取一次那样的态度的话，那时候就可以上下级关系了。</p>
     <p>无论是演技还是不得已都没有关系。国家最贵族的女儿向马克斯低下了头。</p>
     <p>并且此次在密室，还是显示着武力。</p>
@@ -68,7 +68,7 @@
     <p>虽然这是和本题完全没有关系的闲话，但当时对吉克林德是女生的事感到震惊的德德·里奥特现在正燃烧着新的恋情。</p>
     <p>这次的目标是稍微有点不幸的金发美男子，好像是公爵家的儿子。</p>
     <p>咦？这不是菲利克斯吗？</p>
-    <p>那个姑且不论，麦克斯恐怕与吉克林德相反。</p>
+    <p>那个姑且不论，马克斯恐怕与吉克林德相反。</p>
     <p>因为被父母冷淡对待而持续辛苦，结果在十一岁的时候惊人地长大的吉克林顿。</p>
     <p>最近胸部特别成熟，这怎么样都无所谓。</p>
     <p>马克斯……那是过分娇惯的类型。</p>
