--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -15,7 +15,7 @@
     <p>※今天晚上被杀了→修改成今天早上也被杀了。</p>
     <p>我忘记了吸血鬼的行动时间是晚上。</p>
     <p class="divline"></p>
-    <p>菲利克斯和麦克斯·战斗的令人讨厌的联系出现的第二天。</p>
+    <p>菲利克斯和马克斯·战斗的令人讨厌的联系出现的第二天。</p>
     <p>梅赛德斯和汉娜立刻为了取得秘密，朝着某个地方进发。</p>
     <p>这次的目的地是从王都阿本特罗乘坐马车七天左右，如果是皮可的话一天就到的距离的城市。</p>
     <p>这一带是莎恩伯格侯爵家治理的土地，因为面向大海，所以以丰富的海产品闻名。</p>
