--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -95,7 +95,7 @@
     <p>也就是说，如果这个信息是真的……真正的王派将进入。大体上确实结束。</p>
     <p>这里的正当性是迷宫的继承者这样的一点。</p>
     <p>但是，如果在远高于社会地位的格鲁内瓦特家中有能够继承同一个迷宫的人，那么舆论就会以“你当王不就行了吗”而告终。</p>
-    <p>哪里都没有必要强行举起比自己年纪小的麦克斯。</p>
+    <p>哪里都没有必要强行举起比自己年纪小的马克斯。</p>
     <p>既能成为强王，又不能打破国家。万岁。</p>
     <p>而且是瓦尔堡加的儿子……菲利克斯和克里斯托夫很相似，而且和吉克林德公主也有认识，关系很好。</p>
     <p>妹妹梅赛德斯是吉克林德的恩人，吉克林德也信任她。</p>
