--- a/OEBPS/Text/c097.xhtml
+++ b/OEBPS/Text/c097.xhtml
@@ -118,11 +118,11 @@
     <p><span class="character">也就是说，无论何时何地，都能召唤出魔物的军队！</span>”</p>
     <p>“<span class="character">这次袭击，在诸位认识我们真正的王之前是不会停止的！</span>”</p>
     <p>“<span class="character">崇拜吧，称赞我吧！我们真正的王之名是马克斯·战斗！加油吧！</span>”</p>
-    <p>“<span class="character">重复！朝廷派遣我们到这个王都，制裁愚蠢的百姓的伟大王的名字就是麦克斯·法特！</span>”</p>
+    <p>“<span class="character">重复！朝廷派遣我们到这个王都，制裁愚蠢的百姓的伟大王的名字就是马克斯·法特！</span>”</p>
     <p>（他们在干什么！？）</p>
     <p>罗勒不由自主地跳了出来，被想踢飞那个铠甲的魔物的冲动袭击。</p>
     <p>在这种时机下说出袭击者的名字，真是愚蠢的行为。</p>
-    <p>这样的话怎么考虑民众的愤怒全部朝向了麦克斯。</p>
+    <p>这样的话怎么考虑民众的愤怒全部朝向了马克斯。</p>
     <p>不明白意义是那个魔物没有混淆是真货。</p>
     <p>铠甲里有吸血鬼之类的，没有那样的事。</p>
     <p>因为他们非常谨慎，摘下头盔晒在空洞里。</p>
