--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -18,7 +18,7 @@
     <p>……到了最后关头。</p>
     <p>真正的王派，没有留下最快的手段。</p>
     <p>强者们纷纷在汉娜的幕后工作中翻身，作为苦肉计策而实行的袭击不知为何以失败告终。</p>
-    <p>或许是魔物们吧，袭击的犯人是真正的王派的事到处散布，在国内对麦克斯的厌恶程度到最高潮高涨着。</p>
+    <p>或许是魔物们吧，袭击的犯人是真正的王派的事到处散布，在国内对马克斯的厌恶程度到最高潮高涨着。</p>
     <p>不明白意思。明明魔物绝对不会背叛我们的……恐怕，尤利亚一定下达了命令。</p>
     <p>100%不会背叛的魔物做出了愚蠢的行动，命令它的人在我方内。</p>
     <p>因此尤利亚为了不再做多余的事而关在牢里，日后将处刑。</p>
@@ -26,7 +26,7 @@
     <p></p>
     <p>因为尤利亚关闭了，再也没有被搅拌的畏惧了。</p>
     <p>但是已经晚了。到头了。已经结束了。</p>
-    <p>民众的感情完全朝向了憎恶麦克斯的方向，即使从现在开始夺取了国家，也只能迎来即反叛的末路吧。</p>
+    <p>民众的感情完全朝向了憎恶马克斯的方向，即使从现在开始夺取了国家，也只能迎来即反叛的末路吧。</p>
     <p>吸血鬼是力量的信奉者。那么，我们还有一种最后的办法就是用力争夺宝座……但是，就算再怎么崇拜强者，袭击自己的王也不崇拜流石。</p>
     <p>也就是说，已经无可奈何了。</p>
     <p></p>
@@ -45,7 +45,7 @@
     <p>即使再继续下去，也只能用自己的脚朝着绞颈台前进。</p>
     <p>但是改变战场的话还能战斗。</p>
     <p>所以，他决心要离开这个国家。</p>
-    <p>所以他为了传达这件事情走出了房间，朝着有麦克斯的房间走去。</p>
+    <p>所以他为了传达这件事情走出了房间，朝着有马克斯的房间走去。</p>
     <p>既然决定了，就应该早点行动。</p>
     <p>小型化的状态的洞窟钥匙发现的方法等于没有,不过，尽管如此说不定有预料外的事态。</p>
     <p>事实上，他的判断是正确的。</p>
@@ -112,7 +112,7 @@
     <p>用手镯接受被挥下的剑的一击，用背面拳打碎铠甲的脸。</p>
     <p>但是紧接之后洞窟钥匙从待机模式变成钥匙模式，变成了枪。</p>
     <p>虽然说是王剑，但好像克里斯托夫把迷宫变成了枪的形状。</p>
-    <p>接下来是复数的魔物和罗勒……麦克斯出现在现场，他的手里握着长枪。</p>
+    <p>接下来是复数的魔物和罗勒……马克斯出现在现场，他的手里握着长枪。</p>
     <p class="divline">
     </p>
     <p>【役に立たないナビゲート】</p>
