--- a/OEBPS/Text/c099.xhtml
+++ b/OEBPS/Text/c099.xhtml
@@ -29,7 +29,7 @@
     <p>更加那个外侧什么与民众聚集，成为防御罗勒们的逃跑的人的墙。</p>
     <p>在他们的注视下，罗勒飞出了储物小屋，以马克斯为中心的魔物们取得了阵形。</p>
     <p>紧随其后，梅赛德斯和汉娜离开了小屋，与罗勒对视。</p>
-    <p>“反叛者是麦克斯·斗志，还有罗勒·三文鱼。</p>
+    <p>“反叛者是马克斯·斗志，还有罗勒·三文鱼。</p>
     <p>你们完全被包围了。干脆死了心吧！”</p>
     <p>首先汉娜提出投降劝告。</p>
     <p>当然，从一开始就没想过就此停下来，但像这样的开场白，还是暂且以形式来做比较好。</p>
@@ -40,7 +40,7 @@
     <p>但是那张面具好像已经剥落一般，笑容一直萦绕着。</p>
     <p>心里恐怕会想“不要听那种事。现在岂止如此”。</p>
     <p>“等着吧！你们一定误会了！</p>
-    <p>我是麦克斯·冯·奥尔克斯·战斗！作为正当之王的血统的我不可能是叛逆者！”</p>
+    <p>我是马克斯·冯·奥尔克斯·战斗！作为正当之王的血统的我不可能是叛逆者！”</p>
     <p>瞬间……现场的空气冻结了。</p>
     <p>先不说从梅赛德斯那里听到消息的汉娜，周围的士兵们都聚在一起变成了这个小鬼的脸。</p>
     <p>其中甚至还有人浮现血管，露骨地暴露愤怒。</p>
@@ -60,7 +60,7 @@
     <p>“<span class="character">ぬう！？那人就是我爷爷……不可原谅！</span>”</p>
     <p>好像在某种程度上也调查过这边的事情。</p>
     <p>正如罗勒所说，汉娜是尼班的前上司。那个地方没错。</p>
-    <p>麦克斯完全相信巴西的话，用愤怒的眼神看着汉娜。</p>
+    <p>马克斯完全相信巴西的话，用愤怒的眼神看着汉娜。</p>
     <p>竟敢如此扭曲地培育。</p>
     <p>一般认为本人天生的气质本身是直率，诱发更为悲哀。</p>
     <p>“但是在这里战斗会造成多余的牺牲吧。</p>
@@ -80,8 +80,8 @@
     <p>但是对于梅赛德斯来说，迷宫的主人马克斯在前面的情况反而比较方便。</p>
     <p>只要这家伙变得无力了，敌人的战力就会骤然下降。</p>
     <p>所以毫不犹豫地踏入，一闪劈开铠甲的魔物，打开通往马克斯的道路。</p>
-    <p>在二闪中铠甲更是破碎飞出，刀尖掠过麦克斯的眼前。</p>
-    <p>麦克斯对出生以来第一次被转向的杀意屏住呼吸，脸色发青。</p>
+    <p>在二闪中铠甲更是破碎飞出，刀尖掠过马克斯的眼前。</p>
+    <p>马克斯对出生以来第一次被转向的杀意屏住呼吸，脸色发青。</p>
     <p>“等着吧！我们没有争吵的理由！</p>
     <p>坏人是那里的女人，我们不是敌人！睁开眼睛！你被利用了！”</p>
     <p>“<span class="character">这样啊</span>”</p>
@@ -90,23 +90,23 @@
     <p>杀人是……不，杀人到底是不好吃吗？</p>
     <p>毕竟是菲利克斯的堂弟，而且在这么多人面前杀掉孩子，以后会留下不好的印象。</p>
     <p>所以暂且先拿出本事……拿着迷宫钥匙的手臂掉落，夺走迷宫。</p>
-    <p>然后关掉罗勒，麦克斯的待遇交给国家就可以了。</p>
+    <p>然后关掉罗勒，马克斯的待遇交给国家就可以了。</p>
     <p>“ゆ、ゆけ！魔物们啊！把那个女人打败！</p>
     <p>但是绝对不能让你死！”</p>
-    <p>麦克斯的命令使更多的魔物涌出。</p>
+    <p>马克斯的命令使更多的魔物涌出。</p>
     <p>它们究竟拥有相当大的力量呢。</p>
     <p>但是在梅赛德斯的面前简直就像杂鱼一样。</p>
     <p>完全没有成为对手而被踢散，铠甲的碎片又在空中飞舞。</p>
     <p>（未熟、呐）</p>
     <p>迷宫确实是恐怖的力量。</p>
     <p>但是工具毕竟是工具。根据使用者的不同怎么也变化了。</p>
-    <p>和梅赛德斯的使用方法不如贝阿列克斯一样，麦克斯的迷宫的处理远远低于梅赛德斯。</p>
+    <p>和梅赛德斯的使用方法不如贝阿列克斯一样，马克斯的迷宫的处理远远低于梅赛德斯。</p>
     <p>只是逐一投入看起来强的魔物，简直不成话。</p>
     <p>这样的话，只有尤利亚一个人更厉害。</p>
     <p>但是，罗勒可能还有什么办法，虽然很慌张，但还是向马克斯下达了下一步的指示。</p>
     <p>不过，那也不是什么大手段吧。</p>
     <p>说起来就像是充满痛苦的蜘蛛丝。梅赛德斯这样想。</p>
-    <p>“<span class="character">这样的话……马克思大人，请叫出在『客房』中待命的魔物！</span>”</p>
+    <p>“<span class="character">这样的话……马克斯大人，请叫出在『客房』中待命的魔物！</span>”</p>
     <p>“<span class="character">啊，客房……？的确，招待了重要的客人……</span>”</p>
     <p>“<span class="character">对，就是那个。快点！</span>”</p>
     <p>“<span class="character">哇，知道了！客房的魔物啊，出来吧！</span>”</p>
@@ -120,7 +120,7 @@
     <p>听到这个消息，梅赛德斯也明白了敌人的打法。</p>
     <p>原来如此，这个真的很容易理解。</p>
     <p>恐怕是之前袭击的时候，作为保险绑架了几个孩子的吧。</p>
-    <p>麦克斯眼睁睁地看着事态是不是被吞没了，周围的士兵们都怒声高涨。</p>
+    <p>马克斯眼睁睁地看着事态是不是被吞没了，周围的士兵们都怒声高涨。</p>
     <p>对那些声音置若罔闻，罗勒露出了从容的笑容。</p>
     <p>“呵呵……让我们做生意吧。</p>
     <p>请你就这样放过我们吧……那么这些孩子就还给你。</p>
