--- a/OEBPS/Text/c100.xhtml
+++ b/OEBPS/Text/c100.xhtml
@@ -37,10 +37,10 @@
     <p>罗勒半泣不止，混杂着黑道呼喊。</p>
     <p>为了反应那个魔物们打算杀死人质，梅赛德斯比那个更快地毁灭魔物打算发动魔法。</p>
     <p>“<span class="character">住手！不要做那么过分的事！</span>”</p>
-    <p>但是麦克斯的叫声阻止了魔物们的行动。</p>
+    <p>但是马克斯的叫声阻止了魔物们的行动。</p>
     <p>恐怕是预先给予魔物们了『遵从巴西的命令』的命令吧,不过，尽管如此优先度还是马克斯强。</p>
     <p>因此，如果马克斯发出了停止命令，就不能推翻罗勒。</p>
-    <p>“<span class="character">马克思大人……什么……！？</span>”</p>
+    <p>“<span class="character">马克斯大人……什么……！？</span>”</p>
     <p>“<span class="character">罗勒哟……我们不是为了人民而战斗的吗？</span></p>
     <p><span class="character">为什么要做这么过分的事……这样的话，我们不是坏人吗！</span>”</p>
     <p>马克斯虽然年幼，但开始意识到有些奇怪了吧。</p>
@@ -61,18 +61,18 @@
     <p>“<span class="character">罗勒哟……为什么会这样？我所认识的你是更加温柔、做出这么过分事情的男人……</span>”</p>
     <p>“<span class="character">……～～っ！</span>”</p>
     <p>罗勒咬了牙，然后看了梅赛德斯他们。</p>
-    <p>不理解状况，不随心所欲行动的麦克斯放弃了吧。</p>
+    <p>不理解状况，不随心所欲行动的马克斯放弃了吧。</p>
     <p>他用相反的声音，开始说些出乎意料的话。</p>
     <p>“<span class="character">哦，我的马克斯！你骗了我！</span></p>
     <p><span class="character">袭击王都也好，人质作战也罢，都是你自己想出来的，你装作不知道的样子，把我当成恶徒，只做自己好人，还想得救吗！</span>”</p>
     <p>“<span class="character">什……你在说什么，罗勒……？</span>”</p>
     <p>看来罗勒已经改变了作战计划，将罪责推给了马克斯。</p>
-    <p>虽然不是被这种萝卜演技所欺骗的梅赛德斯和汉娜……但是，讽刺的是，由于梅赛德斯对麦克斯的Heito集中活动，周围的人比较相信。</p>
+    <p>虽然不是被这种萝卜演技所欺骗的梅赛德斯和汉娜……但是，讽刺的是，由于梅赛德斯对马克斯的Heito集中活动，周围的人比较相信。</p>
     <p>即便如此，对于欺骗《奥尔克斯》之名的马克斯的心理证据也是最糟糕的一句话。</p>
     <p>这并不是无知的孩子就能解决的问题，吸血鬼的外表原本就不可靠。</p>
     <p>伪装成无知的孩子的大人的可能性也很大。</p>
     <p>……嗯，马克斯实际上只是个孩子。</p>
-    <p>“<span class="character">我们来做生意吧。把叛逆者麦克斯·伊特交给你们。</span></p>
+    <p>“<span class="character">我们来做生意吧。把叛逆者马克斯·伊特交给你们。</span></p>
     <p><span class="character">我一直被他骗……全是他的指示做的事。</span></p>
     <p><span class="character">无论如何，请原谅我……</span>”</p>
     <p>人被逼得走投无路，出乎意料地变得不能冷静的思考。</p>
@@ -84,7 +84,7 @@
     <p>梅赛德斯扛着哈尔巴德，来到罗勒面前。</p>
     <p>“<span class="character">被那种虚言所操纵的傻瓜还真是让人意外……假设正如你所说，你只是被欺骗而已，马克斯就是全部的幕后黑手</span>”</p>
     <p>“<span class="character">不，不，不是假设，这才是……</span>”</p>
-    <p>“<span class="character">反过来说，还是把你当成全都被恶意利用麦克斯的孩子吧。</span>”</p>
+    <p>“<span class="character">反过来说，还是把你当成全都被恶意利用马克斯的孩子吧。</span>”</p>
     <p>是罗勒用的，还是马克斯用的？</p>
     <p>那是很小的问题。</p>
     <p>极端地说，哪个都行。不管结果如何，都不会改变。</p>
@@ -93,7 +93,7 @@
     <p>“<span class="character">不管哪个都无所谓。都去死吧</span>”</p>
     <p>哈尔巴德的刀刃闪现。</p>
     <p>与此同时，罗勒无力地崩溃在地面上，迟了从头上流出血来。</p>
-    <p>麦克斯好像是第一次看到他人的死，屏住呼吸，静坐着。</p>
+    <p>马克斯好像是第一次看到他人的死，屏住呼吸，静坐着。</p>
     <p>好象腰软了。</p>
     <p>梅赛德斯在梅赛德斯面前像散步一样前进，挥舞着哈尔巴德。</p>
     <p>但梅赛德斯并没有马上挥下刀刃，似乎在等待着什么，看了看周围一眼。</p>
@@ -109,7 +109,7 @@
     <p>梅赛德斯老老实实地遵从的事显示吉克林德的影响力，由于这个梅赛德斯的功绩也成为吉克林德的指挥的赏物。</p>
     <p>吉克林德恐怕也注意到了他的功绩被强加于人的事情，但是不能在这里指出来。</p>
     <p>事后肯定会发很多牢骚，不过这也是没办法的吧。</p>
-    <p>梅赛德斯一边看着吉克林德救出人质，拘留麦克斯，一边脱离了人的圈子。</p>
+    <p>梅赛德斯一边看着吉克林德救出人质，拘留马克斯，一边脱离了人的圈子。</p>
 </body>
 
 </html>
