--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -18,12 +18,12 @@
     <p>说可怜倒是可怜，但这里不是和平的现代。</p>
     <p>无论是孩子还是被利用，尽管有酌情体谅的余地，但心神已经丧失，在向王家弓箭的时候死罪也没有停止……就是这样的世界。</p>
     <p>梅赛德斯姑且是来自日本的转生者,不过，那个附近的砍伐已经弄完了。</p>
-    <p>所以就算麦克斯被处刑，也不会因此而动心吧。</p>
+    <p>所以就算马克斯被处刑，也不会因此而动心吧。</p>
     <p>既可怜又同情。但是仅此而已。</p>
     <p>……突然想到。这不是马克斯，是认识的对象……譬如是妹妹的玛吉特，自己怎样想？</p>
     <p>即使是妹妹，也只是“可怜啊”就解决了吧。</p>
     <p>不管怎么说，最近人情味比前世更加浓厚……相反，感觉心越来越冷了。</p>
-    <p>麦克斯所持有的迷宫，与过去愚蠢的国王的罪一起出处变得清楚，那个继承权在菲利克斯·格鲁内瓦特的事也被明确了。</p>
+    <p>马克斯所持有的迷宫，与过去愚蠢的国王的罪一起出处变得清楚，那个继承权在菲利克斯·格鲁内瓦特的事也被明确了。</p>
     <p>此后谈话顺利地进行着，一转眼地吉克林德和菲利克斯成为了婚约者的关系。</p>
     <p>拥有迷宫的人……而且是男人，能力也是无可挑剔的。</p>
     <p>菲利克斯和吉克林德结为婚姻是理所当然的事情。</p>
