--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -22,7 +22,7 @@
     <p>从结论上来说，被斩首的马克斯是影武者。</p>
     <p>当然，想成为国家叛逆者的马克斯的影武者这样的醉汉不存在,不过，如果不在制作就行了。</p>
     <p>能通过那个乱来的东西就是迷宫。</p>
-    <p>“<span class="character">将国民认可的沉重的罪行和裁决给予麦克斯，也希望吉克林德能够接受</span>”</p>
+    <p>“<span class="character">将国民认可的沉重的罪行和裁决给予马克斯，也希望吉克林德能够接受</span>”</p>
     <p>接受了汉娜的胡作非为，梅赛德斯考虑马上和贝阿朵列克斯时一样进行复制。</p>
     <p>这个时候，认为只是为了被处刑而生的复制不需要思考力的梅赛德斯对茨瓦尔夫做了胡闹动作，要求了脑比原创小就行。</p>
     <p>虽然觉得这可能是不可能的，但是如果不故意制造原本应该做的零件就好了，所以很灵活。</p>
