--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -11,41 +11,41 @@
 </head>
 
 <body>
-    <h1>116. ユリアとマックスの現在</h1>
+    <h1>116. 尤利娅和马克斯的現在</h1>
     <p>现在梅赛德斯拥有两个迷宫。</p>
     <p>一个是六年前攻占的施塔克迷宫。</p>
     <p>平时作为装饰品放在口袋里的东西，是战斗时成为哈尔巴德『蓝色眼圈』肆虐的主要武器。</p>
-    <p>梅赛德斯使用的魔物中最信任的阿什拉奥加的本凯和施瓦尔茨·沃尔芬格的克洛，原本也是在这里捕获的魔物。</p>
-    <p>其次，曾经从背面对奥尔克斯调情的贝阿特里克斯帝国所有的迷宫。</p>
-    <p>这是女帝贝阿特里克斯使用过的，被称为“帝国迷宫”。</p>
+    <p>梅赛德斯使用的魔物中最信任的阿修拉奥加的本凯和施瓦尔茨·沃尔芬格的克洛，原本也是在这里捕获的魔物。</p>
+    <p>其次，曾经从背面对奥尔克斯有过威胁的贝阿特里克斯帝国所有的迷宫。</p>
+    <p>这是女帝贝阿特里克斯所使用的，被称为“帝国迷宫”。</p>
     <p>虽然是以植物系的魔物为主的迷宫，但也是贝塞代蒙的舒夫、阿什塔尔的皮可等出身的迷宫，所以并不是只有植物系。</p>
-    <p>这两个是现在梅赛德斯所有的迷宫，其他判明所在的是伯恩哈特（大概）所有的实践迷宫。吉克林德所有的王剑。并且是复杂的家问题的结果交给哥哥菲利克斯的『真的王派』所有的迷宫的三个。</p>
-    <p>在这个“真之王”问题上，梅赛德斯以事情的趋势保管的是被供奉为真之王的可怜少年马克斯·法特，和虽然实力强悍但是头脑很遗憾的隐秘的叫尤里亚的女人。</p>
+    <p>这两个是现在梅赛德斯所有的迷宫，其他判明所在的是伯恩哈特（大概）所有的实践迷宫、吉克林德所有的王剑、以及在复杂的家族问题之后，交给哥哥菲利克斯的『真王派』所有的迷宫的三个。</p>
+    <p>在这个“真王”问题上，梅赛德斯以事情的发展而保管的，是被供奉为真王的可怜少年马克斯·法特，和虽然实力强悍但是头脑很遗憾的隐秘的叫尤利娅的女人。</p>
     <p>梅赛德斯把这两个人的教育交给了本凯，一直放任不管。</p>
     <p>但是，想着差不多该好一点了，所以决定看看情况。</p>
     <p>在自己的迷宫中收纳自己，在迷宫内行走。</p>
-    <p>在改造了二十四个阶层的健身房里，在哥布林格勒的指导下，哥布林们积累了训练，都得到了很健壮的肉体。</p>
+    <p>在整个改造了的二十四层的健身房里，在哥布林格勒的指导下，哥布林们积累了训练，都得到了很健壮的肉体。</p>
     <p>在健身房边上散发出存在感的是一种叫做华尔伊果冻的果冻状魔物，高速压着一吨杠铃。</p>
-    <p>以前像果冻一样脆脆的，现在已经很脆了。完全没有打滑。</p>
+    <p>以前像果冻一样噗噜噗噜的，现在则是硬硬的。完全没有噗噜噗噜的感觉了。</p>
     <p>“<span class="character">哼哼哼哼哼哼哼哼！我是坏果冻！！总有一天会为了帮助主人而努力的！！</span>”</p>
-    <p>汗（？）梅赛德斯一边流着眼泪一边继续追赶着自己的果冻，朝下走去。</p>
+    <p>梅赛德斯无视了流着汗（？）一边追赶着自己的果冻，朝下走去。</p>
     <p>最下层是居住空间，建有梅赛德斯喜欢的三层房子。</p>
     <p>以前是两层楼，但是因为居民增加了，所以不久前增建了三层楼。</p>
-    <p>现在，在那所房子里，本凯应该在对马克斯和尤里亚进行教育。</p>
-    <p>一靠近家，首先在家外面放松的小黑摇着尾巴走来，抚摸着他的头。</p>
-    <p>就这样因为是自己的家，所以完全不客气地打开门去起居室。</p>
-    <p>在那里隔着桌子坐着本凯、马克思、尤利娅，还有作为教师的角色委托本凯支持的哥布林赫克斯。</p>
+    <p>现在，在那所房子里，本凯应该在对马克斯和尤利娅进行教育。</p>
+    <p>一靠近家，首先在家外面放松的克洛摇着尾巴走来，她便摸了摸克洛的头。</p>
+    <p>因为是自己的家，所以完全不客气地打开门去起居室。</p>
+    <p>在那里隔着桌子坐着本凯、马克斯、尤利娅，还有作为教师的角色委托本凯支持的哥布林赫克斯。</p>
     <p>其他梅赛德斯所有（？）作为魔物以外的存在，是女帝贝阿特里克斯，但是那个好像对教育不好，所以在帝国迷宫那边建了房子，让他住在那里。所以不在这里。</p>
     <p>“<span class="character">！</span>”</p>
-    <p>梅赛德斯一走进起居室，麦克斯就慌慌张张地像脱兔似地逃走，蹲在屋角。</p>
-    <p>嗯，在麦克斯看来，梅赛德斯是一个曾被认真杀死的对手，也是现在进行时幽禁自己的对手。不能抱有好的感情。</p>
+    <p>梅赛德斯一走进起居室，马克斯就慌慌张张地像脱兔似地逃走，蹲在屋角。</p>
+    <p>嗯，在马克斯看来，梅赛德斯是一度差点被她杀了的对手，也是现在进行时的幽禁自己的人。不可能抱有好的感情。</p>
     <p>“<span class="character">本凯，马克斯和尤利娅的教育怎么样？</span>”</p>
-    <p>“<span class="character">啊，麦克斯那边很顺利。本来只是被利用的，头脑不坏吧。</span>”</p>
-    <p>麦克斯曾经被一个名叫埃尔菲的罗勒-三文鱼的男人祭奠，真心相信自己是正当国王的血脉，是救国的。</p>
-    <p>在那里完全没有恶意，他从心底认为自己的行动是为了国家和人民的。</p>
-    <p>但是因为是傀儡，所以完全没有多余的知识，所以他是什么都不知道的裸体国王。</p>
+    <p>“<span class="character">啊，马克斯那边很顺利。本来只是被利用的，头脑不坏吧。</span>”</p>
+    <p>马克斯曾经被一个名叫埃尔菲的罗勒-三文鱼的男人祭奠，真心相信自己是正当国王的血脉，可以拯救国家。</p>
+    <p>他没有任何恶意，他从心底认为自己的行动是为了国家和人民的。</p>
+    <p>但是因为是傀儡，所以完全没有多余的知识，所以他是一个一无所知的裸体国王。</p>
     <p>看来，多亏了本凯的教育，这种状态才得以顺利改善。</p>
-    <p>“<span class="character">哇哦哦哦哦……！别，别看我……！因为是后生，所以请不要看到走路的我……。我，我重复着多么令人羞愧的言行啊啊啊啊……</span>”</p>
+    <p>“<span class="character">哇哦哦哦哦……！别，别看我……！我是你的后生之秀，所以请不要行走的耻辱的我……。我，我重复着多么令人羞愧的言行啊啊啊啊……</span>”</p>
     <p>……被改善的结果，好像意识到自己做了多么可耻的事情。</p>
     <p>他被供奉在罗勒的时候自称是马克斯·冯·奥尔库斯·法斯特。</p>
     <p>奥尔克斯贵族的全名由名字、接续词、治理的土地、家名构成。</p>
@@ -53,74 +53,84 @@
     <p>这太丢人了。</p>
     <p>虽然当时并没有什么想法，但是知道真相接受了正确教育的现在就另当别论了。</p>
     <p>到了知道自己暴露了多少笨蛋的现在，过去对他来说只是无法治愈的伤口。</p>
-    <p>“<span class="character">啊……哎呀，怎么了……坚强地活下去吧</span>”</p>
+    <p>“<span class="character">啊……哎呀，怎么说呢……坚强地活下去吧</span>”</p>
     <p>“<span class="character">哇哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦哦！</span>”</p>
-    <p>梅赛德斯不习惯的温柔反而会剜伤伤口吧。麦克斯哭了。</p>
+    <p>梅赛德斯不习惯的温柔反而会剜伤伤口吧。马克斯哭了。</p>
     <p>总之这边好像顺利地改善了。</p>
-    <p>但是这次来到迷宫中，并不是为了给麦克斯的伤口涂上盐。</p>
+    <p>但是这次来到迷宫中，并不是为了给马克斯的伤口涂上盐。</p>
     <p>为了确认尤利娅是否可以使用。</p>
     <p>“<span class="character">好久不见，尤利娅</span>”</p>
     <p>“<span class="character">啊，啊……</span>”</p>
     <p>尤利娅和梅赛德斯的对话是从以前交战审问时开始的。</p>
     <p>尤利娅曾经是在福格拉的国家修行的厉害的隐秘，总之脑子太遗憾了。</p>
-    <p>什么是我方的利益，什么是我方的绊脚石都不理解，想着好的地方到处乱动，最后被罗勒幽禁了。</p>
-    <p>把它捡起来的是梅赛德斯，其实到今天为止都没有交谈，也没有见面。</p>
+    <p>在不理解什么有利于己方，什么阻碍己方的情况下，自以为是地到处乱动，最后被罗勒幽禁了。</p>
+    <p>把她捡起来的是梅赛德斯，其实到今天为止都没有交谈，也没有见面。</p>
     <p>“<span class="character">……说什么好呢？总之，应该先向你道谢吧。如果你不把我捡起来的话，大概我会死的……</span>”</p>
-    <p>“<span class="character">不需要什么道谢的。我觉得可以用，所以就捡了起来</span>”</p>
+    <p>“<span class="character">不需要什么道谢的。我只是觉得能用才捡起来的</span>”</p>
     <p>如果能用就用。如果不是那样的话，就不要从迷宫里拿出来，直接把它弄死。</p>
     <p>最坏的情况下虽然很可惜要点，但是也有制作复制品处理原创的方法。</p>
-    <p>所以这在某种意义上是尤里亚的分支点。</p>
+    <p>所以这在某种意义上是尤利娅的分支点。</p>
     <p>一旦放弃，梅赛德斯就会毫无情义地抛弃对方。</p>
     <p>反过来说，只要能告知利用价值，就会受到优待。</p>
-    <p>虽然没有理解到这个程度，但尤里亚还是恭恭敬敬地屈膝向梅赛德斯低头。</p>
-    <p>“<span class="character">拯救生命的‘义’应该用生命来回报。这叫做“ブシド”。这是在我修行过的福格拉国教我的事。我的生命是你捡来的……那你就随便用吧</span>”</p>
-    <p>山楂茶……武士道？梅赛德斯认为，这又是一个充满幻想色彩的词。</p>
-    <p>因为是尤里亚的事，所以不管怎样都会错穿什么，但现状是无法确定的。</p>
+    <p>虽然没有理解到这个程度，但尤利娅还是恭恭敬敬地屈膝向梅赛德斯低头。</p>
+    <p>“<span class="character">拯救生命的‘义’应该用生命来回报。这叫做“武士道”。这是在我修行过的福格拉国教我的事。我的生命是你捡来的……那你就随便用吧</span>”</p>
+    <p>武士道……武士道？梅赛德斯认为，这又是一个不像幻想色彩的词。</p>
+    <p>因为是尤利娅的事，所以不管怎样都会错穿什么，但现状是无法确定的。</p>
     <p>总之，我知道她有服从我的意思。</p>
-    <p>但是问题是尤里亚能不能起作用。</p>
+    <p>但是问题是尤利娅能不能起作用。</p>
     <p>以前的她认为是好的，拖了我的后腿，就是所谓的“无能的劳动者”。</p>
     <p>即使无能无计可施，但至少要遵从我的命令，成为一个不做任何多余事情的“无能懒汉”，那就有充分的用处了。</p>
-    <p>至少，技能肯定是真的。</p>
-    <p>“<span class="character">……一个，任务的时候需要注意的事情是？</span>”</p>
+    <p>至少在技术上是货真价实的。</p>
+    <p>“<span class="character">……问个问题，任务的时候需要注意的事情是？</span>”</p>
     <p>“<span class="character">只忠实地遵守被给予的命令</span>”</p>
-    <p>对于梅赛德斯的问题，尤里亚毫不犹豫地回答。</p>
+    <p>对于梅赛德斯的问题，尤利娅毫不犹豫地回答。</p>
     <p>实际上如果只遵守命令的话，是绝对达不到一流的，需要瞬间的判断力。</p>
     <p>但是，这是因为有足够的头脑来判断的。</p>
     <p>如果自己想的话只会产生多余的结果的话，那么彻底地使用等待指示的道具会比较有用。</p>
     <p>本凯也是这么想的，这样教的吧。</p>
-    <p>“<span class="character">第二，你不能做的事是？</span>”</p>
+    <p>“<span class="character">第二问，你不能做的事是？</span>”</p>
     <p>“<span class="character">自己思考的事情。我只要是遵从你的剑就可以了</span>”</p>
-    <p>不能让尤里亚这种类型的人做的事。</p>
+    <p>不能让尤利娅这种类型的人做的事。</p>
     <p>总之，这只不过是一句“不让他随意判断”而已。</p>
     <p>上次战斗的时候也是这样。</p>
-    <p>尤里亚的判断全部都是背道而驰的。</p>
-    <p>“<span class="character">还有三点，谁都不要相信。你知道吗？</span>”</p>
+    <p>尤利娅的判断全部都是背道而驰的。</p>
+    <p>“<span class="character">还有第三点，谁都不要相信。你知道吗？</span>”</p>
     <p>“<span class="character">啊，我知道。因为我是笨蛋……一定会很容易被骗的。所以，除了你和他的部下以外，我绝对不相信</span>”</p>
-    <p>尤里亚总之很容易被骗。</p>
+    <p>尤利娅总之很容易被骗。</p>
     <p>以前也被汉娜骗过，把信息吐得很有趣。</p>
     <p>但是那个罗勒的使用方法不好。</p>
     <p>先输入“不要相信自己说过的话以外的任何事情”就可以了。</p>
     <p>反正无法判断真伪的话，那就把所有的东西都截断，只执行最初的指令。</p>
-    <p>如果能守护它的话，尤里亚就会成为优秀的“影子”吧。</p>
-    <p>“那我就命令你了。从影子中守护我指定的名为“莱斯利”的精灵少女，监视她。</p>
-    <p>当危险降临到她的身上时，她说“快带着莱斯利脱离，回来吧”。</p>
-    <p>除此之外的时候要等着，“不管发生什么，都不要出现在任何人的面前”。</p>
-    <p>除此之外“什么都不要做”</p>
-    <p>“<span class="character">啊！我已经接到命令了！</span>”</p>
-    <p>对于梅赛德斯的命令，尤里亚很快回复了，但总觉得好像听到了什么奇怪的话。</p>
+    <p>如果能守护它的话，尤利娅就会成为优秀的“影子”吧。</p>
+    <p>“<span class="character">那我就命令你了。从影子中守护我指定的名为‘莱斯利’的精灵少女，监视她。</span></p>
+    <p><span class="character">如果她有危险，就‘迅速带着莱斯利离开，回来’</span>”。</p>
+    <p><span class="character">除此之外的时候要等着，‘不管发生什么，都不要出现在任何人的面前’。</span></p>
+    <p><span class="character">除此之外‘什么都不要做’</span></p>
+    <p>“<span class="character">啊！我已经接到命令了！主公</span>”</p>
+    <p>对于梅赛德斯的命令，尤利娅很快回复了，但总觉得好像听到了什么奇怪的话。</p>
     <p>虽然可能不是听错了，但是为了慎重起见还是决定确认一下。</p>
-    <p>“<span class="character">老爷？</span>”</p>
-    <p>“<span class="character">啊，不。如果是福格拉的国家的话，主人会这么说。除此之外，还有国王的事，比如OTAKA大人。啊，不行吗？</span>”</p>
+    <p>“<span class="character">主公？</span>”</p>
+    <p>“<span class="character">啊，不。如果是福格拉的国家的话会对主人这么说。除此之外，还有国王的事就是父亲大人。啊，不行吗？</span>”</p>
     <p>老爷，这么说来，梅赛德斯想象的可能是偏见，但他用发髻骑马，“你忘了看我的脸了吗！”一边说着一边挥舞着刀像在胡闹一样的样子。</p>
     <p>老实说，老爷又不是笨蛋，说起来，女人和老爷又是什么样的呢？</p>
-    <p>但是那样的话尤里亚满足的话也没关系吧。</p>
+    <p>但是那样的话尤利娅满足的话也没关系吧。</p>
     <p>“<span class="character">不，没关系。</span>”</p>
     <p>称呼的方式可以让他喜欢吧。</p>
     <p>总之，这样香火就扔了。</p>
-    <p>先让桃子从上空监视尤里亚，这样的话尤里亚今后是否也能使用就决定了。</p>
-    <p>尤里亚的能力舍弃是很可惜的，如果这样能很好地发挥作用的话，今后也可以作为间谍使用。</p>
+    <p>先让皮可从上空监视尤利娅，这样的话尤利娅今后是否也能使用就决定了。</p>
+    <p>尤利娅的能力舍弃是很可惜的，如果这样能很好地发挥作用的话，今后也可以作为间谍使用。</p>
     <p>没有找到拥有这么多技能的人，如果是在迷宫复制的话，会被吃掉相当多的分数吧。</p>
-    <p>尤里亚的能力真的是那么优秀，太可惜了。</p>
+    <p>尤利娅的能力真的是那么优秀，太可惜了。</p>
+
+    <p class="divline"></p>
+    <p>梅赛德斯：<span class="character">……</span></p>
+    <p><span class="character">我是马克斯·冯·奥尔库斯·法斯特。我是合法的国王的血脉，我怎么可能是叛徒?</span>”</p>
+    <p>马克斯：<span class="character">啊啊啊啊啊啊啊啊!</span></p>
+    <p>梅赛德斯：<span class="character">人民们，很抱歉一直没有出现。</span></p>
+    <p><span class="character">不过没关系，现在由我来保卫国家。</span></p>
+    <p><span class="character">现在让我们携手共创美好的未来吧。”</span></p>
+    <p>马克斯：<span class="character">啊啊啊啊啊啊啊啊!</span></p>
+    <p>马克斯倒下了。</p>
 </body>
 
 </html>
