--- a/OEBPS/Text/c117.xhtml
+++ b/OEBPS/Text/c117.xhtml
@@ -13,21 +13,21 @@
 <body>
     <h1>117. 接近的终点</h1>
     <p>“<span class="character">我确实说过什么也不要做，但我万万没想到你连呼吸都是所以要死了……</span>”</p>
-    <p>距离尤里亚被送出仅十分钟后。</p>
-    <p>尤里亚很快就回到了梅赛德斯的面前……与其这么说，不如说是被桃子强行送回，跪坐着。</p>
+    <p>距离尤利娅被送出仅十分钟后。</p>
+    <p>尤利娅很快就回到了梅赛德斯的面前……与其这么说，不如说是被皮可强行送回，跪坐着。</p>
     <p>那是因为，这个女人竟然过于老实地接受了梅赛德斯“什么都不要做”的命令，连呼吸都没有，窒息得快死了。</p>
     <p>因此piko慌慌张张地把她带回来，从梅赛德斯那得了呼吸许可，好不容易才保住了性命。</p>
     <p>“这次我的指示好像不好。</p>
     <p>可以呼吸吗？也允许吃饭和睡觉等为了生活的最低限度的行为。</p>
     <p>如果是你的话，即使睡着了也能让意识的一部分觉醒，在有事的时候马上起床吧？”</p>
     <p>“<span class="character">啊，当然啦。交给我吧</span>”</p>
-    <p>“……好……还有，虽然她说不要在任何人面前露面，但要记住，只有桃子是例外。</p>
-    <p>我指示什么的时候让桃子拿着信”</p>
+    <p>“……好……还有，虽然她说不要在任何人面前露面，但要记住，只有皮可是例外。</p>
+    <p>我指示什么的时候让皮可拿着信”</p>
     <p>梅赛德斯揉着眉间，发出指示。</p>
-    <p>对于比想象中更难操纵尤里亚这事，我感到很头疼。</p>
+    <p>对于比想象中更难操纵尤利娅这事，我感到很头疼。</p>
     <p>虽然能力很优秀……明明真的很优秀，为什么脑袋这么笨呢。</p>
     <p>但是这次的失败，我觉得我稍微明白了怎么指示比较好。</p>
-    <p>梅赛德斯很早就开始担心，一边目送着意气风发的尤里亚，接下来会发生什么问题。</p>
+    <p>梅赛德斯很早就开始担心，一边目送着意气风发的尤利娅，接下来会发生什么问题。</p>
     <p class="divline"></p>
     <p>据说神模仿自己的样子制造的生物是神的赝品……被称为沥青。</p>
     <p>这个称呼比较接近吸血鬼一方的语言，所以对精灵们来说很不满，但毕竟是神决定的名字。不能改变。</p>
@@ -80,7 +80,7 @@
     <p>所以今天也顺利地在地下城内进行着探索。</p>
     <p>现在梅赛德斯和莱斯利已经通过了五个等级的迷宫，而且不是向下而是向上攀登。</p>
     <p>基本上这个迷宫如果飞行的话会很有利，所以梅赛德斯乘坐着从帝国迷宫出发的阿什塔尔，莱斯利乘坐着皮乔。</p>
-    <p>其实梅赛德斯用自己的力量捕获的桃子忠诚心更高，使用起来更方便，但是桃子现在正在监视尤里亚，所以使用了代替的阿什塔尔。</p>
+    <p>其实梅赛德斯用自己的力量捕获的皮可忠诚心更高，使用起来更方便，但是皮可现在正在监视尤利娅，所以使用了代替的阿什塔尔。</p>
     <p>……即便如此，这个小丑真的想跟到什么时候呢？</p>
     <p>自从以前在第三舞台上一起行动以来，这只奇怪的鸟总是带着伙伴们一直跟着。</p>
     <p>那是梅赛德斯他们出了迷宫之后也没有变化，回到了出发点后一定会在附近等着。</p>
@@ -91,7 +91,7 @@
     <p>和迷宫的守护者战斗，胜利，然后得到迷宫。那里没有变更。</p>
     <p>但是那个时候如果带着莱斯利的话，最糟糕的是她会丧命的吧。</p>
     <p>其他暂且不说，只有守护者是通过梅尔处理，以万全的状态和万全的成员不挑战的话，很有可能输的对手。没有一边庇护莱斯利一边战斗的余地。</p>
-    <p>因此，如果要和守护者战斗的话，我认为只有自己、本凯、小黑、舒夫、桃子、尤利娅、Beactorix这样强大的成员来加强是最好的。</p>
+    <p>因此，如果要和守护者战斗的话，我认为只有自己、本凯、克洛、舒夫、皮可、尤利娅、Beactorix这样强大的成员来加强是最好的。</p>
     <p>很遗憾，我不想把莱斯利加入自己队伍。</p>
     <p>这也有她是没到和守护者战斗的等级的原因，也有认为让莱斯利死是损失的原因。</p>
     <p>也有制作了莱斯利的克隆这样的粗暴的职业……即使克隆人100%继承本人的人格和记忆，也不知道她是否继承了自己的想象力。</p>
