--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -32,16 +32,16 @@
     <p>《制造No.153。正式名称AS-04。当地识别名，多米尼安。</p>
     <p>掌管的属性是“阳”和“铁”。</p>
     <p>是统括恩格尔种的上位怪物。</p>
-    <p>近距离战的战斗力可以和阿什拉奥加匹敌，加上可以操纵多个魔法。</p>
+    <p>近距离战的战斗力可以和阿修拉奥加匹敌，加上可以操纵多个魔法。</p>
     <p>但是擅长支援魔法和回复魔法，不管怎么说比起自己战斗更擅长向后退指挥军团”</p>
     <p>从茨瓦尔夫那里很快得到了情报，梅赛德斯对那副铠甲产生了兴趣。</p>
     <p>细细想来，在梅赛德斯作为主力使用的战斗力中，还没有支援型。</p>
-    <p>梅赛德斯和强敌战斗时最重要的战斗力是本凯、小黑、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
-    <p>其他的信任度稍低，所以不能过于相信，但是尤里亚和贝尔特里克斯的战斗力也是无可挑剔的。</p>
+    <p>梅赛德斯和强敌战斗时最重要的战斗力是本凯、克洛、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
+    <p>其他的信任度稍低，所以不能过于相信，但是尤利娅和贝尔特里克斯的战斗力也是无可挑剔的。</p>
     <p>最后是斯塔克迷宫的守护者施瓦茨・史塔利和帝国迷宫的守护者帕拉蒂斯。这两个机构甚至可能毁灭一个国家的军队，真是绝招。</p>
     <p>但是，迷宫的守护者可以使用的战斗力不能算守护者。</p>
     <p>对迷宫的守护者的对手必须挑战没有迷宫主人的力量，只能使用作为主人的力量以外获得的战斗力。</p>
-    <p>因此，在成为主人之前捕获的本凯他们、原本连魔物都没有的尤里亚和贝尔特里克斯的话就可以拿出来，但是成为主人后用主人权限得到的迷宫里的魔物们和守护者都不能使用。</p>
+    <p>因此，在成为主人之前捕获的本凯他们、原本连魔物都没有的尤利娅和贝尔特里克斯的话就可以拿出来，但是成为主人后用主人权限得到的迷宫里的魔物们和守护者都不能使用。</p>
     <p>当然，如果梅赛德斯通过这个迷宫的话，这个多米尼安就属于梅赛德斯，可以大量生产。</p>
     <p>但是无论增加多少，都不能用于今后与守护者的战斗。</p>
     <p>因为在攻略后，那是“侍奉着迷宫主人”而不是“侍奉着梅赛德斯”。</p>
@@ -50,7 +50,7 @@
     <p>因此梅赛德斯决定不再打倒多米尼翁而是捕获它。</p>
     <p>还有一点，不能忽略的是多米尼安所在的位置。</p>
     <p>为了保护巨大的门而站着，门前还有转播地点。</p>
-    <p>回想起来，在斯塔克迷宫的时候，两个选择的门前都有门，阿什拉奥加守护着那里。</p>
+    <p>回想起来，在斯塔克迷宫的时候，两个选择的门前都有门，阿修拉奥加守护着那里。</p>
     <p>也就是说，这里是二选一的门前的地点……如果返回的话，这就是最后一次了。</p>
     <p>如果超越了那扇门，除了选择金色和黑色两种选择之外别无他法。</p>
     <p>“好容易走到了门的强者们啊。</p>
