--- a/OEBPS/Text/c119.xhtml
+++ b/OEBPS/Text/c119.xhtml
@@ -15,7 +15,7 @@
     <p>捕获了多米尼安的梅赛德斯决定再去地下城一次。</p>
     <p>外面天空就像是日落时一样，开始变暗。</p>
     <p>在试炼前，梅赛德斯确保了多米尼翁这一优秀的战力，但梅赛德斯并不乐观，认为他会直接在正式行动中出场。</p>
-    <p>对打倒自己的对手无条件服从的本凯，虽说是魔物，但因为是狼，所以和原本就容易习惯人的小黑情况不同。</p>
+    <p>对打倒自己的对手无条件服从的本凯，虽说是魔物，但因为是狼，所以和原本就容易习惯人的克洛情况不同。</p>
     <p>首先必须要让自己放弃，必须要让自己放弃。</p>
     <p>原本梅赛德斯只组织自己和魔物的组合，因为如果是同样的吸血鬼的话有背叛的可能性……也就是说，不能相信。</p>
     <p>因此，如果哪怕只有一点点背叛的可能性的话，那就不算是队伍成员了。</p>
@@ -42,7 +42,7 @@
     <p class="divline"></p>
     <p>与莱斯利分开的梅赛德斯立刻进入自己所拥有的迷宫，与刚抓获的多米尼翁见面。</p>
     <p>多米尼安大概是理解了即使他发狂也没用，坐在房子的地板上。</p>
-    <p>宾奇和小黑围在那周围，等待着多米尼安无论何时暴走都能被抓住。</p>
+    <p>宾奇和克洛围在那周围，等待着多米尼安无论何时暴走都能被抓住。</p>
     <p>不过，这里是梅赛德斯所有的迷宫中。万一闹大了，多米尼安也没办法打吧。</p>
     <p>“<span class="character">没想到是迷宫的所有者……</span>”</p>
     <p>当梅赛德斯进入视野时，多米尼安发出了赞叹的声音。</p>
@@ -83,7 +83,7 @@
     <p>或者说，有这样功能的信息本身就失去了吗……。</p>
     <p>“<span class="character">以前的主人是王族吗？</span>”</p>
     <p>“<span class="character">虽然没有被称王，但被称为老爷。</span>”</p>
-    <p>老爷……确实，正如尤里亚所说，在福格拉的国家好像是这样称呼王的。</p>
+    <p>老爷……确实，正如尤利娅所说，在福格拉的国家好像是这样称呼王的。</p>
     <p>这样的话，之前的持有者肯定是福格拉的王族吧。</p>
     <p>到底发生了什么呢？是政变，还是暗杀？或者说，只是事故死亡。</p>
     <p>也有因为没有孩子而病死或衰老而死的情况。</p>
