--- a/OEBPS/Text/c120.xhtml
+++ b/OEBPS/Text/c120.xhtml
@@ -67,13 +67,13 @@
     <p>从精灵村那边冒着烟，有一股烧焦的味道飘到了这里。</p>
     <p>好像失火了。是谁搞错了将炎魔法打入帐篷里了吗？</p>
     <p>因为是精灵方面的问题，所以可以放任不管，但是如果莱斯利被卷入的话会很困扰，所以决定先去现场看看。</p>
-    <p>万一的时候，我想护卫的尤里亚会想办法的……不，还是不安。去看看吧。</p>
+    <p>万一的时候，我想护卫的尤利娅会想办法的……不，还是不安。去看看吧。</p>
     <p>“<span class="character">殿</span>”</p>
     <p>这样想着的话，因为后面有人叫我，所以回头看。</p>
-    <p>在那里，有抱着莱斯利的尤里亚。</p>
+    <p>在那里，有抱着莱斯利的尤利娅。</p>
     <p>莱斯利不知道是什么事情，慌慌张张的。</p>
-    <p>尤里亚带来的事是指瑞丽身上有什么危险逼近了吗？</p>
-    <p>看来尤里亚顺利完成了命令。</p>
+    <p>尤利娅带来的事是指瑞丽身上有什么危险逼近了吗？</p>
+    <p>看来尤利娅顺利完成了命令。</p>
     <p>“什么，什么！？什么！？离我远一点！</p>
     <p>我不去不行！我的发明！发明本身就是！”</p>
     <p>“<span class="character">……什么情况？</span>”</p>
@@ -81,16 +81,16 @@
     <p>然后，她想冲进燃烧的帐篷，所以按照你的命令带了过来”</p>
     <p>梅赛德斯朝着烟的方向，然后整理情况。</p>
     <p>点燃帐篷的恐怕是格拉西兰吧。也许还有其他名字中以格拉开头的精灵，总之先让格拉西兰暂时放火。</p>
-    <p>然后看到了莱斯利慌张的样子，燃烧起来的是莱斯利的帐篷，为了救出发明品打算冲进燃烧的帐篷，尤里亚按照梅赛德斯的命令将其带走。</p>
+    <p>然后看到了莱斯利慌张的样子，燃烧起来的是莱斯利的帐篷，为了救出发明品打算冲进燃烧的帐篷，尤利娅按照梅赛德斯的命令将其带走。</p>
     <p>“<span class="character">梅赛德斯！？等、谁啊这个人！这是什么！？</span>”</p>
     <p>“<span class="character">冷静点，这莱斯利是我方的。</span>”</p>
-    <p>一边原谅慌张的莱斯利，一边看尤里亚。</p>
+    <p>一边原谅慌张的莱斯利，一边看尤利娅。</p>
     <p>虽然装出一副很得意的样子，但实际上这次真的是功不可没。而且，只要命令的发出方法没有错误，就可以确认能很好地发挥作用。</p>
     <p>嘛，作为梅赛德斯来说，如果说欲望的话，本来就希望他停止放火……确实没有命令“如果有人想在帐篷里放火的话就停下来”。</p>
-    <p>所以尤里亚很老实，一直盯着格拉西兰放火吧。</p>
+    <p>所以尤利娅很老实，一直盯着格拉西兰放火吧。</p>
     <p>话虽如此，梅赛德斯并没有谴责这一点的意思。</p>
     <p>现在姑且回收莱斯利就已经充分发挥了作用。</p>
-    <p>“<span class="character">做得好的尤里亚</span>”</p>
+    <p>“<span class="character">做得好的尤利娅</span>”</p>
     <p>说些安慰的话，然后让莱斯利下台。</p>
     <p>莱斯利似乎还没有从混乱中恢复过来，但稍微平静了些，停止了喧哗。</p>
     <p>梅赛德斯为了尽量不刺激她而选择了语言。</p>
@@ -103,10 +103,10 @@
     <p>“<span class="character">啊？这个……啊？为什么梅赛德斯有？话说点火的是格拉西兰？</span>”</p>
     <p>“如果问为什么要带，是因为在帐篷燃烧前为了慎重起见回收了。</p>
     <p>虽然没有确实放火，但我认为是格拉西兰没错”</p>
-    <p>“<span class="character">在燃烧之前……这样啊，这个叫尤里亚的人……</span>”</p>
-    <p>莱斯利好像误会了尤里亚从帐篷里把书给撤了。</p>
+    <p>“<span class="character">在燃烧之前……这样啊，这个叫尤利娅的人……</span>”</p>
+    <p>莱斯利好像误会了尤利娅从帐篷里把书给撤了。</p>
     <p>哎呀，怎么可能想象不出很久前梅赛德斯复印过了呢。</p>
-    <p>尤里亚说：“什么事？”虽然装出一副这样的表情，但为了不说多余的话，一直沉默着。</p>
+    <p>尤利娅说：“什么事？”虽然装出一副这样的表情，但为了不说多余的话，一直沉默着。</p>
     <p>和以前相比，智能好像提高了很多。如果是这种情况的话，今后也会成为有用的东西吧。</p>
     <p>“<span class="character">但是，格拉西兰就是这样……确实是个讨厌的家伙，但没想到能做到那种程度……</span>”</p>
     <p>“<span class="character">那帮家伙会干的。</span>”</p>
