--- a/OEBPS/Text/c122.xhtml
+++ b/OEBPS/Text/c122.xhtml
@@ -32,7 +32,7 @@
     <p>“<span class="character">把手脚绑起来活捉，带我到我面前来。</span>”</p>
     <p>“<span class="character">是</span>”</p>
     <p>依莉亚的记忆力依旧有些困难，但她发现了从精灵村落来到这里的人类的存在。</p>
-    <p>因此发出了捕获命令，就这样等待尤里亚的归来。</p>
+    <p>因此发出了捕获命令，就这样等待尤利娅的归来。</p>
     <p>首先和预想的一样……笨蛋格拉西恩果然还是把部下派过来了。</p>
     <p>可以看出目的。大概是万能万能化了吧。</p>
     <p>如果决斗的话，以不会使用魔法的莱斯利为对手使用魔法的格拉西恩绝对是有利的，但是如果唯一有可能输给他的话，那就是莱斯利拿着的万能手枪。</p>
@@ -42,7 +42,7 @@
     <p>但是，莱斯利的鳟鱼枪可以马上发射，在决斗开始的同时，也可以击穿格拉西兰的头使之绝命。</p>
     <p>虽然从莱斯利的性格上来说不会那样做，但是偏离目标撞到头部的可能性并不是零。</p>
     <p>所以格拉西恩为了将自己的死亡和失败的可能性变为零而瞄准了鳟鱼枪……这是一件很容易预料到的事情。</p>
-    <p>不久，尤里亚带着一个精灵回来，跪在了梅赛德斯。</p>
+    <p>不久，尤利娅带着一个精灵回来，跪在了梅赛德斯。</p>
     <p>旁边有一个手脚被绑住的精灵，看起来是一个很不情愿地跟随格拉西恩的家伙。</p>
     <p>“那么，马上来回答一下你来干什么吧。</p>
     <p>答非所问，掉一个指头。沉默了五秒，但还是掉了一个手指。</p>
