--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -64,11 +64,11 @@
     <p>用魔法产生的沙子将相位关在一起，用重力将其固定并压缩。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">尤里亚。能用水的魔法把那个弄湿吗？</span>”</p>
+    <p>“<span class="character">尤利娅。能用水的魔法把那个弄湿吗？</span>”</p>
     <p>“<span class="character">简单的任务</span>”</p>
     <p></p>
     <p></p>
-    <p>尤里亚给压缩后的沙子浇水后变成了巨大的泥团子。</p>
+    <p>尤利娅给压缩后的沙子浇水后变成了巨大的泥团子。</p>
     <p>严格说来，泥是指比沙子还要细的颗粒，并不是指湿了的沙子，但也可以吧。</p>
     <p>简而言之，就是和在沙地玩耍的孩子玩泥土是同一级别的事情。。</p>
     <p>但是，那个规模无论如何也不能称之为游戏。</p>
@@ -101,8 +101,8 @@
     <p>他漫不经心地回到尤利亚身边，穿过了试炼之间。</p>
     <p>再往前就是位于迷宫最深处的怪物复制室。</p>
     <p>树木中央镶嵌着圆形水槽，里面沉睡着魔物。</p>
-    <p>第一次看到这样的景象，尤里亚和多米尼安惊讶地环视四周，但梅赛德斯已经习惯了。</p>
-    <p>稍等片刻，梅赛德斯等人的面前出现了人类的身影，尤里亚和多米尼翁立刻采取了警戒态势。</p>
+    <p>第一次看到这样的景象，尤利娅和多米尼安惊讶地环视四周，但梅赛德斯已经习惯了。</p>
+    <p>稍等片刻，梅赛德斯等人的面前出现了人类的身影，尤利娅和多米尼翁立刻采取了警戒态势。</p>
     <p></p>
     <p></p>
     <p>“<span class="character">“放下武器，这家伙不是敌人。是这个迷宫的管理者。</span>”</p>
