--- a/OEBPS/Text/c130.xhtml
+++ b/OEBPS/Text/c130.xhtml
@@ -16,7 +16,7 @@
     <p>莱斯利拿着的书，是目前无法替换的贵重物品。</p>
     <p>也许同一本书在某个地方也有，但是首先大半的人会在不知道那本书的价值的情况下，作为一本无法读的书扔掉吧。</p>
     <p>所以，梅赛德斯为了让那个笨蛋格拉西兰不管做什么，都能保护莱斯利和书本，事实上发生了什么。</p>
-    <p>尤里亚救出了莱斯利，书伪装成事先在地牢里复制的东西已经回收了，交给了莱斯利。到此为止太好了</p>
+    <p>尤利娅救出了莱斯利，书伪装成事先在地牢里复制的东西已经回收了，交给了莱斯利。到此为止太好了</p>
     <p>但是格拉西兰好像只回收了那本书，没有烧。</p>
     <p>也不认为他能理解那本书的价值。</p>
     <p>但是，从莱斯利非常重视的事情来看，或许是想到了这个很有价值而留下来了。</p>
