--- a/OEBPS/Text/c131.xhtml
+++ b/OEBPS/Text/c131.xhtml
@@ -15,7 +15,7 @@
     <p>“<span class="character">我想象附近有一个洞穴或一间破屋，因为它是袭击者的藏身之处，但是……这是一个奇怪的藏身之处，不是吗？</span>”</p>
     <p></p>
     <p>在袭击吸血鬼和埃尔菲贵族并杀害的贼的藏身处判明后半天。</p>
-    <p>梅赛德斯和莱斯利，还有本凯和小黑在汉娜的带领下，到达了离村落很远的树林前。</p>
+    <p>梅赛德斯和莱斯利，还有本凯和克洛在汉娜的带领下，到达了离村落很远的树林前。</p>
     <p>根据汉娜抓到的贼的证言，这里好像是他们的藏身之处，但与一般想象中的藏身之处相去甚远。</p>
     <p>如果说是随意的想象的话就到此为止了，但是在梅赛德斯中，贼给人的印象是住在目标附近的洞窟里。</p>
     <p>不过，这片森林离村子还挺远的，也不清楚是不是森林。</p>
@@ -64,9 +64,9 @@
     <p>“<span class="character">……确实，那是道具啊。甚至是理想的。</span>”</p>
     <p></p>
     <p>自己完全不考虑，只是忠实地服从命令。那也许是隐秘的一个到达点。</p>
-    <p>实际上梅赛德斯也要求尤里亚那样在，所以不是别人的事。</p>
+    <p>实际上梅赛德斯也要求尤利娅那样在，所以不是别人的事。</p>
     <p>不要想多余的事情，只是实行吧。</p>
-    <p>梅赛德斯要求尤里亚的事，在那个延长线上有这次的袭击犯。</p>
+    <p>梅赛德斯要求尤利娅的事，在那个延长线上有这次的袭击犯。</p>
     <p></p>
     <p>“<span class="character">理想的……呵呵</span>”</p>
     <p>“<span class="character">……什么？</span>”</p>
@@ -157,7 +157,7 @@
     <p>在剩下的两个前锋中，一个人竟然转身逃跑了。</p>
     <p>另一方在明知会被打的基础上发动特攻，紧急接近梅赛德斯等人。</p>
     <p>但是，这种鲁莽的突击不会成为威胁。</p>
-    <p>前面飞出的小黑以像风一样的速度咬断了福格拉的单翼，接着用剑砍掉了本凯剩下的翅膀，抓住福格拉的头打到了地上。</p>
+    <p>前面飞出的克洛以像风一样的速度咬断了福格拉的单翼，接着用剑砍掉了本凯剩下的翅膀，抓住福格拉的头打到了地上。</p>
     <p></p>
     <p>“<span class="character">本凯，莱斯利，射击！</span>”</p>
     <p>“<span class="character">如您所愿！</span>”</p>
