--- a/OEBPS/Text/c133.xhtml
+++ b/OEBPS/Text/c133.xhtml
@@ -176,7 +176,7 @@
     <p><span class="character">其中只有吸血鬼拿了三个……</span>”</p>
     <p></p>
     <p>一边说，一边看菲利克斯。</p>
-    <p>不用说，吸血鬼得到的“第三个”是费利克斯拥有的，以前是麦克斯拥有的迷宫。</p>
+    <p>不用说，吸血鬼得到的“第三个”是费利克斯拥有的，以前是马克斯拥有的迷宫。</p>
     <p>现在，吸血鬼表面上是吉克林德、费利克斯，还有帝国的贝阿特里克斯拥有迷宫。</p>
     <p>……但是，实际上帝国的地下城是梅赛德斯拥有的，而且梅赛德斯除了施塔克地下城之外，还有这次得到的格伦萨地下城。</p>
     <p>而且，如果认为实践迷宫的主人是伯恩哈特的话，实际上吸血鬼有六个。</p>
