--- a/OEBPS/Text/c138.xhtml
+++ b/OEBPS/Text/c138.xhtml
@@ -35,7 +35,7 @@
     <p>“<span class="character">去吧，我的棋子。</span>”</p>
     <p></p>
     <p>梅赛德斯和伯恩哈特同时释放了大量魔物。</p>
-    <p>梅赛德斯一侧除了有本凯、小黑、皮可、舒夫四只妖怪外，还有施塔克地下城、帝国地下城、格伦茨杰地下城等的魔物。</p>
+    <p>梅赛德斯一侧除了有本凯、克洛、皮可、舒夫四只妖怪外，还有施塔克地下城、帝国地下城、格伦茨杰地下城等的魔物。</p>
     <p>伯恩哈特的背后也排着各种各样的魔物，一直在期待着激战的时刻。</p>
     <p>而且，其总数并不亚于拥有三个地下城的梅赛德斯。</p>
     <p>不，不仅如此，数量可能会稍高一些。</p>
@@ -128,7 +128,7 @@
     <p></p>
     <p>“<span class="character">哦哦哦哦哦哦哦哦！</span>”</p>
     <p></p>
-    <p>被夺走了队长宝座的本凯化身为一对当千的鬼，一个接一个地杀死了魔物，小黑迅速地在战场上奔跑，咬断了敌人的喉咙。</p>
+    <p>被夺走了队长宝座的本凯化身为一对当千的鬼，一个接一个地杀死了魔物，克洛迅速地在战场上奔跑，咬断了敌人的喉咙。</p>
     <p>舒夫在敌人中也是格外强大的魔物……恐怕他会和门卫门前的番人级敌人交战，皮科率领着格伦茨杰地下城的飞行型魔物在天空中飞舞，向敌军发动奇袭。</p>
     <p>在两军的激战中，贝尔尼托克斯和前代兽王的视线交叉，贝尔尼托克斯露出了从容的笑容……上一代兽王浮现出憎恨的样子。</p>
     <p></p>
@@ -138,10 +138,10 @@
     <p>虽然比不上守护者，但却是比番人级更强的相当方便的魔物。</p>
     <p>弗雷德里克也完全是送我好魔物的礼物。</p>
     <p>守护者化为绿色巨人，为了支持守护者们的战斗而前进。</p>
-    <p>尤里亚从那个影子中飞出来，为了暗杀前代兽王而进行奇袭……但是，那把刀刃被伯恩哈特手下的鸟人、隐密部队长的汉藏阻止了。</p>
+    <p>尤利娅从那个影子中飞出来，为了暗杀前代兽王而进行奇袭……但是，那把刀刃被伯恩哈特手下的鸟人、隐密部队长的汉藏阻止了。</p>
     <p>以前应该丢了一只脚，现在两脚确实齐备了。</p>
     <p>是治疗了，还是和以前不同的个体呢……不管怎样，都是强大的敌人。</p>
-    <p>尤里亚和汉藏高速奔跑，成为在战场上奔跑的两个黑影，多次交锋。</p>
+    <p>尤利娅和汉藏高速奔跑，成为在战场上奔跑的两个黑影，多次交锋。</p>
     <p>简直就像雷鸣般震耳欲聋，数个魔物之间发生冲突，守护者甚至可以操纵自然现象，梅赛德斯和伯恩哈特将在本片中饰演势均力敌的战斗。</p>
     <p>那已经不是个人之间的战斗了。</p>
     <p>那已经是战争了。</p>
