--- a/OEBPS/Text/c139.xhtml
+++ b/OEBPS/Text/c139.xhtml
@@ -121,7 +121,7 @@
     <p>“<span class="character">梅赛德斯……请无论如何回到上面呼吁停止战斗。这样下去魔物就会白白死去。</span>”</p>
     <p>“<span class="character">虽然我很想这么做，但是我也赶不上再生。</span>”</p>
     <p></p>
-    <p>梅赛德斯移动手臂，总算将斧枪唯一留下的存在……麦克斯·战斗召唤了出来。</p>
+    <p>梅赛德斯移动手臂，总算将斧枪唯一留下的存在……马克斯·战斗召唤了出来。</p>
     <p>因为完全没有战斗力，所以只有他没有参加，但是这次反而觉得这样比较好。</p>
     <p>多亏于此，我才在这里出了传话的角色。</p>
     <p></p>
@@ -134,7 +134,7 @@
     <p>“<span class="character">哦哦哦哦哦哦！</span>”</p>
     <p></p>
     <p>然后用吸血鬼的腕力和体力攀登悬崖，不过，毕竟太高了。</p>
-    <p>不管怎么说，就算是吸血鬼，麦克斯也不接受战斗训练，只是被罗勒之类的精灵欺骗，被国王打造出来的孩子而已。</p>
+    <p>不管怎么说，就算是吸血鬼，马克斯也不接受战斗训练，只是被罗勒之类的精灵欺骗，被国王打造出来的孩子而已。</p>
     <p>也就是说可悲的是，他的身体能力和梅赛德斯的母亲琉迪亚没有太大的差别。</p>
     <p>于是，理所当然地从悬崖上滑下去了。</p>
     <p></p>
@@ -196,10 +196,10 @@
     <p></p>
     <p>“<span class="character">汪！</span>”</p>
     <p></p>
-    <p>看到戈特弗里特为了传达什么而从洞里出来的小黑，在倒下的梅赛德斯的枕边着陆了。</p>
-    <p>另外，虽然在位置上踩到了伯恩哈特的脸，但是现在的伯恩哈特也不能甩掉小黑，所以默默地青筋。</p>
+    <p>看到戈特弗里特为了传达什么而从洞里出来的克洛，在倒下的梅赛德斯的枕边着陆了。</p>
+    <p>另外，虽然在位置上踩到了伯恩哈特的脸，但是现在的伯恩哈特也不能甩掉克洛，所以默默地青筋。</p>
     <p></p>
-    <p>“<span class="character">小黑，你来得很好。不好意思，请把我抬上去。</span>”</p>
+    <p>“<span class="character">克洛，你来得很好。不好意思，请把我抬上去。</span>”</p>
     <p>“<span class="character">汪！</span>”</p>
     <p></p>
     <p>就这样，梅赛德斯安全地回到了上面，向大家宣告了自己的胜利和伯恩哈特的失败，以及战斗的结束。</p>
