--- a/OEBPS/Text/c011.xhtml
+++ b/OEBPS/Text/c011.xhtml
@@ -16,7 +16,7 @@
     <p>两者都是从トライヌ商会赠送的。</p>
     <p>关于这个，就像是对提案者的感谢之情，因为没有特别收费，所以实际上是免费得到想要的东西。</p>
     <p>不管怎样，探索迷宫就变得特别容易了。</p>
-    <p>因为新加入了成员小黑，战力也齐备了也可以以更深的地方作为目标。</p>
+    <p>因为新加入了成员克洛，战力也齐备了也可以以更深的地方作为目标。</p>
     <p>总之，让我们以トライヌ和他的护卫到达的最下层为目标吧。当然，如果觉得有一点困难就马上撤退。</p>
     <p>就这样制订了计划，准备出发······话说回来，梅赛德斯在家门前遇到了陌生男女。</p>
     <p>人数是四人。有两个男的，两个女的。</p>
@@ -144,7 +144,7 @@
     <p>“<span class="character">要这样做</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>背对着发呆的波利斯，没事一样地走着。</p>
-    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和小黑骄傲地走着。</p>
+    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和克洛骄傲地走着。</p>
     <p>度过了无用的时间。虽然这么想着，但梅赛德斯却和看上去害怕自己的年幼少女目光相对。</p>
     <p>“<span class="character">来</span>”</p>
     <p>“<span class="character">诶？</span>”</p>
