--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -89,9 +89,9 @@
     <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。纯粹浪费钱。</p>
     <p>看起来很朴素也没关系。不管怎样追求性能和机能美的装备拘泥。</p>
     <p></p>
-    <p>“ <span class="character">上街了，本凯，小黑。你们的装备也更新一下吧</span>”</p>
+    <p>“ <span class="character">上街了，本凯，克洛。你们的装备也更新一下吧</span>”</p>
     <p></p>
-    <p>带着本凯和小黑在城市里巡回，巡视着各种各样的武器。</p>
+    <p>带着本凯和克洛在城市里巡回，巡视着各种各样的武器。</p>
     <p>首先把到目前为止使用的武器没有一个例外地全部卖掉。已经不需要这些了。</p>
     <p>然后梅赛德斯买了自己用的哈尔巴德。</p>
     <p><span class="comment translator">ハルバード wiki:斧枪是一种双手持握的长柄武器，在十四及十五世纪时最为风行。这个字有可能是来自德文字Halm与Barte，现在德语称此为Hellebarde。斧枪以大钉将斧刃固定在柄头，通常有钩或刺在斧刃的背面，这可以用来钩住骑兵， 斧枪通常长1.5至1.8米。 斧枪与中国的戟并不相同，斧枪是斧与枪的结合，而戟则是戈与矛/枪的结合。</span></p>
@@ -129,7 +129,7 @@
     <p>而且好像这种程度的重量也不会感到什么幸苦，像以前那样轻快地走着。</p>
     <p>武器则是全装上去买了很多。</p>
     <p>今后，可以根据委托的内容改变他的装备。</p>
-    <p>小黑的装备是……虽然有大个的狼用铠甲,但是因为反过来快要阻碍运动了所以保留。</p>
+    <p>克洛的装备是……虽然有大个的狼用铠甲,但是因为反过来快要阻碍运动了所以保留。</p>
     <p></p>
     <p>装备结束后接下来就是消耗品。</p>
     <p>因为已经有食物了就直接跳过，寻找恢复用的道具。</p>
@@ -139,7 +139,7 @@
     <p>也就是说，当然也有关闭了恢复魔法的魔石，这样的东西在seeker里很受欢迎。</p>
     <p>梅赛德斯先购买二十个，再买齐各种各样的魔石。</p>
     <p>强力的冻结魔法的魔石、炎之魔石、水之魔石等，主要以自己不能使用的东西为主。</p>
-    <p>因为行李增加了，再买一个大型背包，这边让小黑拿。</p>
+    <p>因为行李增加了，再买一个大型背包，这边让克洛拿。</p>
     <p></p>
     <p>“<span class="character">主，我有建议”</span></p>
     <p>“<span class="character">什么？”</span></p>
@@ -149,7 +149,7 @@
     <p></p>
     <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把本凯拉了进去。</p>
     <p>可是本凯总觉得是战斗力。可以正常使用。</p>
-    <p>小黑的速度很快，是能载着梅赛德斯战斗的战力。拿行李不是明智的事情。</p>
+    <p>克洛的速度很快，是能载着梅赛德斯战斗的战力。拿行李不是明智的事情。</p>
     <p></p>
     <p><span class="character">确实想要不参加战斗而专心拿着行李的成员。</span></p>
     <p><span class="character">知道了。去宠物店吧”</span></p>
