--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -52,7 +52,7 @@
     <p>这个时候，主人钥匙作为防盗的自我防卫机能把洞内的岩石等拿出来，由于那个内侧填埋自己从外边变得看不见。</p>
     <p>简单来说，就是以变成状态来隐瞒自己。</p>
     <p>梅赛德斯在迷宫内增设的一间房子里聚集了主要成员，向茨瓦尔夫寻求说明。</p>
-    <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、小黑。</p>
+    <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、克洛。</p>
     <p>迷失方向，继续迷失方向的舒夫，与前几天捕获的阿修塔尔的4人和1只一只。</p>
     <p>也许阿修塔尔也应该给它取个名字。</p>
     <p>顺便一提，克利亚在格鲁内瓦特家看家。</p>
@@ -68,7 +68,7 @@
     <p>而且因为双方都有很高的战斗力，如果增加的话增加的话没有损失。</p>
     <p>但是因为只想批量生产舒夫变得异怪，批量生产还没做。</p>
     <p>“<span class="character">我问，重新注册本凯，会不会增加呢？</span>”</p>
-    <p>“可以。但是本凯比通常的阿什拉奥加成本要高。</p>
+    <p>“可以。但是本凯比通常的阿修拉奥加成本要高。</p>
     <p>同时，这个情况是同样的魔物之前的阿修拉奥加被删除”</p>
     <p>“<span class="character">嗯</span>”</p>
     <p>梅赛德斯想，这个暂且保留可以吗？</p>
