--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -90,7 +90,7 @@
     <p>我还没有决定要跟着我，倒不如说是没有注意到。</p>
     <p>而且这也算是公爵家，在家格上倒 不如说是胜过王族以外的人，所以轻易低头只是被舐而已。</p>
     <p>如果在这里强迫我低头的话，那只是因为对方不懂礼貌，那个时候我就赶紧回去吧。</p>
-    <p>“你来了，梅赛德斯。我是麦克斯·冯·奥尔克斯战斗。</p>
+    <p>“你来了，梅赛德斯。我是马克斯·冯·奥尔克斯战斗。</p>
     <p>要成为最新的攻略者的正当血统，早晚是统治这个奥鲁克斯的人”</p>
     <p>残酷的名字。坦率地这样想。</p>
     <p>这个国家的贵族的名字半吊子的是德国风格，稍微长了点，微妙地和德国不同。</p>
