--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -58,18 +58,18 @@
     <p>准备在病床附近睡觉。</p>
     <p>这两个魔物可以说是梅赛德斯的主力，但这次的迷宫攻略——也就是说在和守护者的战斗中没有出场机会。</p>
     <p>从至今为止的构造来看，可以认为首先是十有八九的空战。</p>
-    <p>如果有立足点的话，敏捷的小黑还能从立足点飞到立足点上，这一点也不是不能战斗，但是如果立足点没有的可能性的话，梅赛德斯认为这次还是一开始就可以飞的成员来挑战比较好。</p>
+    <p>如果有立足点的话，敏捷的克洛还能从立足点飞到立足点上，这一点也不是不能战斗，但是如果立足点没有的可能性的话，梅赛德斯认为这次还是一开始就可以飞的成员来挑战比较好。</p>
     <p>至于本凯，很遗憾没有讨论的必要……身为重战士的他在这次战场上什么也做不了。竭尽全力射箭的程度是吗。</p>
-    <p>即使是放在桃子上运用，开销也太重了。</p>
+    <p>即使是放在皮可上运用，开销也太重了。</p>
     <p>如果能再加上新的防御，那就太好了。</p>
     <p>然后决定把莱斯利也晾在一边。果然，守护她的风险太大了。</p>
     <p>“<span class="character">那我走了。这里交给你了</span>”</p>
     <p>“<span class="character">啊。交给我吧</span>”</p>
     <p>“<span class="character">哇！</span>”</p>
-    <p>和本凯和小黑打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
+    <p>和本凯和克洛打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
     <p>到达迷宫后立刻移动到门前的转播地点，然后派出这次的对守护者成员。</p>
-    <p>首先，梅赛德斯自己就不用说了，多米尼翁和皮科，还有尤里亚这次使用的脸蛋。</p>
-    <p>虽然加入了新加入的多米尼翁和尤里亚是不安的材料，但是考虑到与战场的相性，得出了这两个人最好的结论。</p>
+    <p>首先，梅赛德斯自己就不用说了，多米尼翁和皮科，还有尤利娅这次使用的脸蛋。</p>
+    <p>虽然加入了新加入的多米尼翁和尤利娅是不安的材料，但是考虑到与战场的相性，得出了这两个人最好的结论。</p>
     <p>穿过门，穿过长长的通道。</p>
     <p>穿过那前面的门，看到的是黑色和金色的门。</p>
     <p>回想起来，这两扇门是五年前第一次看到了吗。他扛着哈尔巴德，等待着地下城的试练。</p>
@@ -81,7 +81,7 @@
     <p>但是，梅赛德斯并没有迷路。从一开始就没有黄金之门。</p>
     <p>“<span class="character">选择的是黑色的门。</span>”</p>
     <p>所以我选择了黑色的门，然后走进了打开的门。</p>
-    <p>之后是桃子、多米尼翁和尤利亚。</p>
+    <p>之后是皮可、多米尼翁和尤利亚。</p>
     <p>就这样前进了一段时间后，梅赛德斯他们终于到达了试炼前。</p>
     <p>那里和梅赛德斯预想的一样是没有立足之地的空中。</p>
     <p>通往门的通道在试炼之间中断了，前方没有任何立足点。</p>
