--- a/OEBPS/Text/c129.xhtml
+++ b/OEBPS/Text/c129.xhtml
@@ -25,7 +25,7 @@
     <p>虽说是窗户，但毕竟是只在攻略完地牢之前才使用的简易住宅，所以只是用木板堵住的简单的东西。我没用玻璃之类的奢侈品。</p>
     <p>通过搬开木板可以看到外面。</p>
     <p>梅赛德斯也和莱斯利一样把窗户上的木板搬开，确认了在外面吵闹的人。</p>
-    <p>说点题外话，因为在吸血鬼的旅馆里有精灵，所以吸引了其他住宿客人的奇异视线，但是谁都不抱怨是因为附近有本凯和小黑吧。</p>
+    <p>说点题外话，因为在吸血鬼的旅馆里有精灵，所以吸引了其他住宿客人的奇异视线，但是谁都不抱怨是因为附近有本凯和克洛吧。</p>
     <p></p>
     <p></p>
     <p>“<span class="character">这不是你们共谋的事吧！</span>”</p>
@@ -151,17 +151,17 @@
     <p>“<span class="character">汪！</span>”</p>
     <p></p>
     <p></p>
-    <p>——是小黑。</p>
-    <p>汉娜的部下拼命地紧紧抱住他的脖子和腰，但是小黑一边拉着他们，一边慢慢地走了进来。</p>
+    <p>——是克洛。</p>
+    <p>汉娜的部下拼命地紧紧抱住他的脖子和腰，但是克洛一边拉着他们，一边慢慢地走了进来。</p>
     <p></p>
     <p></p>
     <p>“<span class="character">啊……放手吧。那只小狗是友方。</span>”</p>
     <p></p>
     <p></p>
-    <p>被汉娜指示，紧紧抱住小黑的男人们离开了。</p>
-    <p>然后小黑看了一次梅赛德斯之后走到出口，停在那里又看了梅赛德斯。</p>
+    <p>被汉娜指示，紧紧抱住克洛的男人们离开了。</p>
+    <p>然后克洛看了一次梅赛德斯之后走到出口，停在那里又看了梅赛德斯。</p>
     <p>好像希望跟着。</p>
-    <p>本来应该和本凯一起作为莱斯利的护卫留下的小黑来了，这是因为外面发生了什么事情。</p>
+    <p>本来应该和本凯一起作为莱斯利的护卫留下的克洛来了，这是因为外面发生了什么事情。</p>
     <p>梅赛德斯和汉娜眼神交流后，马上出门返回了旅店。</p>
     <p>之后汉娜也紧接着。</p>
     <p>稍微跑回旅馆前，发现那里人山人海。</p>
